@@ -20,6 +20,10 @@
  */
 package org.dbunit;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertSame;
+
 import java.sql.SQLException;
 
 import org.dbunit.database.DatabaseConfig;
@@ -29,148 +33,202 @@ import org.dbunit.dataset.ITable;
 import org.dbunit.dataset.xml.FlatXmlDataSetBuilder;
 import org.dbunit.dataset.xml.FlatXmlDataSetTest;
 import org.dbunit.operation.DatabaseOperation;
-
-import junit.framework.TestCase;
+import org.junit.jupiter.api.Test;
 
 /**
  * @author gommma
  * @author Last changed by: $Author: gommma $
- * @version $Revision: 789 $ $Date: 2008-08-15 16:45:18 +0200 (Fr, 15. Aug 2008) $
+ * @version $Revision: 789 $ $Date: 2008-08-15 16:45:18 +0200 (Fr, 15. Aug 2008)
+ *          $
  * @since 2.4.3
  */
-public class DBTestCaseIT extends TestCase
+class DBTestCaseIT
 {
 
-	/**
-	 * Tests whether the user can simply change the {@link DatabaseConfig} by
-	 * overriding the method {@link DatabaseTestCase#setUpDatabaseConfig(DatabaseConfig)}.
-	 * @throws Exception
-	 */
-	public void testConfigureConnection() throws Exception
-	{
-	    DatabaseEnvironment dbEnv = DatabaseEnvironment.getInstance();
-	    final IDatabaseConnection conn = dbEnv.getConnection();
-	    final DefaultDatabaseTester tester = new DefaultDatabaseTester(conn);
-	    final DatabaseOperation operation = new DatabaseOperation(){
-	        public void execute(IDatabaseConnection connection, IDataSet dataSet)
-            throws DatabaseUnitException, SQLException {
-	            assertEquals(new Integer(97), connection.getConfig().getProperty(DatabaseConfig.PROPERTY_BATCH_SIZE));
-	            assertEquals(true, connection.getConfig().getFeature(DatabaseConfig.FEATURE_BATCHED_STATEMENTS));
-	        }
-	    };
-	    
-	    DBTestCase testSubject = new DBTestCase() {
-	        
+    /**
+     * Tests whether the user can simply change the {@link DatabaseConfig} by
+     * overriding the method
+     * {@link DatabaseTestCase#setUpDatabaseConfig(DatabaseConfig)}.
+     * 
+     * @throws Exception
+     */
+    @Test
+    void testConfigureConnection() throws Exception
+    {
+        final DatabaseEnvironment dbEnv = DatabaseEnvironment.getInstance();
+        final IDatabaseConnection conn = dbEnv.getConnection();
+        final DefaultDatabaseTester tester = new DefaultDatabaseTester(conn);
+        final DatabaseOperation operation = new DatabaseOperation()
+        {
+            @Override
+            public void execute(final IDatabaseConnection connection,
+                    final IDataSet dataSet)
+                    throws DatabaseUnitException, SQLException
+            {
+                assertThat(connection.getConfig()
+                        .getProperty(DatabaseConfig.PROPERTY_BATCH_SIZE))
+                                .isEqualTo(Integer.valueOf(97));
+                assertThat(connection.getConfig()
+                        .getProperty(DatabaseConfig.FEATURE_BATCHED_STATEMENTS))
+                                .isEqualTo(true);
+            }
+        };
+
+        final DBTestCase testSubject = new DBTestCase()
+        {
+
             /**
              * method under test
              */
-            protected void setUpDatabaseConfig(DatabaseConfig config) {
-                config.setProperty(DatabaseConfig.PROPERTY_BATCH_SIZE, new Integer(97));
-                config.setFeature(DatabaseConfig.FEATURE_BATCHED_STATEMENTS, true);
+            @Override
+            protected void setUpDatabaseConfig(final DatabaseConfig config)
+            {
+                config.setProperty(DatabaseConfig.PROPERTY_BATCH_SIZE,
+                        Integer.valueOf(97));
+                config.setProperty(DatabaseConfig.FEATURE_BATCHED_STATEMENTS,
+                        true);
             }
 
-            protected IDatabaseTester newDatabaseTester() throws Exception {
+            @Override
+            protected IDatabaseTester newDatabaseTester() throws Exception
+            {
                 return tester;
             }
 
-            protected DatabaseOperation getSetUpOperation() throws Exception {
+            @Override
+            protected DatabaseOperation getSetUpOperation() throws Exception
+            {
                 return operation;
             }
 
-            protected DatabaseOperation getTearDownOperation() throws Exception {
+            @Override
+            protected DatabaseOperation getTearDownOperation() throws Exception
+            {
                 return operation;
             }
 
-            protected IDataSet getDataSet() throws Exception {
+            @Override
+            protected IDataSet getDataSet() throws Exception
+            {
                 return null;
             }
         };
-        
+
         // Simulate JUnit which first of all calls the "setUp" method
         testSubject.setUp();
-        
-        IDatabaseConnection actualConn = testSubject.getConnection();
-        assertEquals(new Integer(97), actualConn.getConfig().getProperty(DatabaseConfig.PROPERTY_BATCH_SIZE));
+
+        final IDatabaseConnection actualConn = testSubject.getConnection();
+        assertThat(actualConn.getConfig()
+                .getProperty(DatabaseConfig.PROPERTY_BATCH_SIZE))
+                        .isEqualTo(Integer.valueOf(97));
         assertSame(conn, actualConn);
-        
-        IDatabaseConnection actualConn2 = testSubject.getDatabaseTester().getConnection();
-        assertEquals(new Integer(97), actualConn2.getConfig().getProperty(DatabaseConfig.PROPERTY_BATCH_SIZE));
+
+        final IDatabaseConnection actualConn2 =
+                testSubject.getDatabaseTester().getConnection();
+        assertThat(actualConn2.getConfig()
+                .getProperty(DatabaseConfig.PROPERTY_BATCH_SIZE))
+                        .isEqualTo(Integer.valueOf(97));
         assertSame(tester, testSubject.getDatabaseTester());
         assertSame(conn, testSubject.getDatabaseTester().getConnection());
-	}
-	
-	
-	/**
-     * Tests the simple setup/teardown invocations while keeping the DatabaseConnection open.
+    }
+
+    /**
+     * Tests the simple setup/teardown invocations while keeping the
+     * DatabaseConnection open.
+     * 
      * @throws Exception
      */
-    public void testExecuteSetUpTearDown() throws Exception
+    @Test
+    void testExecuteSetUpTearDown() throws Exception
     {
-        //TODO implement this
-        DatabaseEnvironment dbEnv = DatabaseEnvironment.getInstance();
-        // Retrieve one single connection which is 
+        // TODO implement this
+        final DatabaseEnvironment dbEnv = DatabaseEnvironment.getInstance();
+        // Retrieve one single connection which is
         final IDatabaseConnection conn = dbEnv.getConnection();
-        try{
-            final DefaultDatabaseTester tester = new DefaultDatabaseTester(conn);
-            final IDataSet dataset = new FlatXmlDataSetBuilder().build(FlatXmlDataSetTest.DATASET_FILE);
-            
-            // Connection should not be closed during setUp/tearDown because of userDefined IOperationListener
-            DBTestCase testSubject = new DBTestCase() {
-                
-                protected IDatabaseTester newDatabaseTester() throws Exception {
+        try
+        {
+            final DefaultDatabaseTester tester =
+                    new DefaultDatabaseTester(conn);
+            final IDataSet dataset = new FlatXmlDataSetBuilder()
+                    .build(FlatXmlDataSetTest.DATASET_FILE);
+
+            // Connection should not be closed during setUp/tearDown because of
+            // userDefined IOperationListener
+            final DBTestCase testSubject = new DBTestCase()
+            {
+
+                @Override
+                protected IDatabaseTester newDatabaseTester() throws Exception
+                {
                     return tester;
                 }
-    
-                protected DatabaseOperation getSetUpOperation() throws Exception {
+
+                @Override
+                protected DatabaseOperation getSetUpOperation() throws Exception
+                {
                     return DatabaseOperation.CLEAN_INSERT;
                 }
-    
-                protected DatabaseOperation getTearDownOperation() throws Exception {
+
+                @Override
+                protected DatabaseOperation getTearDownOperation()
+                        throws Exception
+                {
                     return DatabaseOperation.DELETE_ALL;
                 }
-    
-                protected IDataSet getDataSet() throws Exception {
+
+                @Override
+                protected IDataSet getDataSet() throws Exception
+                {
                     return dataset;
                 }
 
-                protected IOperationListener getOperationListener() {
-                    return new DefaultOperationListener(){
+                @Override
+                protected IOperationListener getOperationListener()
+                {
+                    return new DefaultOperationListener()
+                    {
+                        @Override
                         public void operationSetUpFinished(
-                                IDatabaseConnection connection) 
+                                final IDatabaseConnection connection)
                         {
-                            // Do not invoke the "super" method to avoid that the connection is closed
+                            // Do not invoke the "super" method to avoid that
+                            // the connection is closed
                             // Just do nothing
                         }
 
+                        @Override
                         public void operationTearDownFinished(
-                                IDatabaseConnection connection) 
+                                final IDatabaseConnection connection)
                         {
-                            // Do not invoke the "super" method to avoid that the connection is closed
+                            // Do not invoke the "super" method to avoid that
+                            // the connection is closed
                             // Just do nothing
                         }
-                        
+
                     };
                 }
-                
-                
+
             };
-            
+
             // Simulate JUnit which first of all calls the "setUp" method
             testSubject.setUp();
-            // The connection should still be open so we should be able to select from the DB
-            ITable testTableAfterSetup = conn.createTable("TEST_TABLE");
-            assertEquals(6, testTableAfterSetup.getRowCount());
+            // The connection should still be open so we should be able to
+            // select from the DB
+            final ITable testTableAfterSetup = conn.createTable("TEST_TABLE");
+            assertThat(testTableAfterSetup.getRowCount()).isEqualTo(6);
             assertFalse(conn.getConnection().isClosed());
-            
+
             // Simulate JUnit and invoke "tearDown"
             testSubject.tearDown();
-            // The connection should still be open so we should be able to select from the DB
-            ITable testTableAfterTearDown = conn.createTable("TEST_TABLE");
-            assertEquals(0, testTableAfterTearDown.getRowCount());
+            // The connection should still be open so we should be able to
+            // select from the DB
+            final ITable testTableAfterTearDown =
+                    conn.createTable("TEST_TABLE");
+            assertThat(testTableAfterTearDown.getRowCount()).isEqualTo(0);
             assertFalse(conn.getConnection().isClosed());
-        }
-        finally{
-            // Ensure that the connection is closed again so that 
+        } finally
+        {
+            // Ensure that the connection is closed again so that
             // it can be established later by subsequent test cases
             dbEnv.closeConnection();
         }
