@@ -20,16 +20,18 @@
  */
 package org.dbunit.dataset;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+
 import java.math.BigDecimal;
 import java.sql.Date;
-
-import junit.framework.Assert;
 
 import org.dbunit.Assertion;
 import org.dbunit.dataset.datatype.DataType;
 import org.dbunit.dataset.xml.FlatXmlDataSet;
 import org.dbunit.dataset.xml.FlatXmlDataSetBuilder;
 import org.dbunit.testutil.TestUtils;
+import org.junit.jupiter.api.Test;
 
 /**
  *
@@ -37,13 +39,10 @@ import org.dbunit.testutil.TestUtils;
  * @since Mar 17, 2003
  * @version $Revision$
  */
-public class ReplacementTableTest extends AbstractTableTest
+class ReplacementTableTest extends AbstractTableTest
 {
-    public ReplacementTableTest(String s)
-    {
-        super(s);
-    }
 
+    @Override
     protected ITable createTable() throws Exception
     {
         return createDataSet().getTable("TEST_TABLE");
@@ -51,48 +50,44 @@ public class ReplacementTableTest extends AbstractTableTest
 
     private IDataSet createDataSet() throws Exception
     {
-        FlatXmlDataSet fds = new FlatXmlDataSetBuilder().build(TestUtils.getFile("xml/flatXmlTableTest.xml"));
+        final FlatXmlDataSet fds = new FlatXmlDataSetBuilder()
+                .build(TestUtils.getFile("xml/flatXmlTableTest.xml"));
         return new ReplacementDataSet(fds);
     }
 
+    @Override
     public void testGetMissingValue() throws Exception
     {
         // TODO test something usefull
     }
 
-    public void testObjectReplacement() throws Exception
+    @Test
+    void testObjectReplacement() throws Exception
     {
-        String tableName = "TABLE_NAME";
-        BigDecimal trueObject = new BigDecimal((double)1);
-        BigDecimal falseObject = new BigDecimal((double)0);
-        Date now = new Date(System.currentTimeMillis());
+        final String tableName = "TABLE_NAME";
+        final BigDecimal trueObject = new BigDecimal((double) 1);
+        final BigDecimal falseObject = new BigDecimal((double) 0);
+        final Date now = new Date(System.currentTimeMillis());
 
-        Column[] columns = new Column[] {
-            new Column("BOOLEAN_TRUE", DataType.BOOLEAN),
-            new Column("BOOLEAN_FALSE", DataType.BOOLEAN),
-            new Column("STRING_TRUE", DataType.CHAR),
-            new Column("STRING_FALSE", DataType.CHAR),
-            new Column("STRING_VALUE", DataType.CHAR),
-            new Column("DATE_VALUE", DataType.DATE),
-            new Column("NULL_TO_STRING_VALUE", DataType.CHAR),
-            new Column("STRING_TO_NULL_VALUE", DataType.CHAR),
-        };
+        final Column[] columns =
+                new Column[] {new Column("BOOLEAN_TRUE", DataType.BOOLEAN),
+                        new Column("BOOLEAN_FALSE", DataType.BOOLEAN),
+                        new Column("STRING_TRUE", DataType.CHAR),
+                        new Column("STRING_FALSE", DataType.CHAR),
+                        new Column("STRING_VALUE", DataType.CHAR),
+                        new Column("DATE_VALUE", DataType.DATE),
+                        new Column("NULL_TO_STRING_VALUE", DataType.CHAR),
+                        new Column("STRING_TO_NULL_VALUE", DataType.CHAR),};
 
         // Setup actual table
-        Object[] actualRow = new Object[] {
-            Boolean.TRUE,
-            Boolean.FALSE,
-            Boolean.TRUE.toString(),
-            Boolean.FALSE.toString(),
-            "value",
-            "now",
-            null,
-            "null",
-        };
+        final Object[] actualRow = new Object[] {Boolean.TRUE, Boolean.FALSE,
+                Boolean.TRUE.toString(), Boolean.FALSE.toString(), "value",
+                "now", null, "null",};
 
-        DefaultTable originalTable = new DefaultTable(tableName, columns);
+        final DefaultTable originalTable = new DefaultTable(tableName, columns);
         originalTable.addRow(actualRow);
-        ReplacementTable actualTable = new ReplacementTable(originalTable);
+        final ReplacementTable actualTable =
+                new ReplacementTable(originalTable);
         actualTable.addReplacementObject(Boolean.TRUE, trueObject);
         actualTable.addReplacementObject(Boolean.FALSE, falseObject);
         actualTable.addReplacementObject("now", now);
@@ -100,68 +95,48 @@ public class ReplacementTableTest extends AbstractTableTest
         actualTable.addReplacementObject(null, "nullreplacement");
 
         // Setup expected table
-        Object[] expectedRow = new Object[] {
-            trueObject,
-            falseObject,
-            Boolean.TRUE.toString(),
-            Boolean.FALSE.toString(),
-            "value",
-            now,
-            "nullreplacement",
-            null,
-        };
+        final Object[] expectedRow = new Object[] {trueObject, falseObject,
+                Boolean.TRUE.toString(), Boolean.FALSE.toString(), "value", now,
+                "nullreplacement", null,};
 
-        DefaultTable expectedTable = new DefaultTable(tableName, columns);
+        final DefaultTable expectedTable = new DefaultTable(tableName, columns);
         expectedTable.addRow(expectedRow);
-
         Assertion.assertEquals(expectedTable, actualTable);
     }
 
-    public void testSubstringReplacement() throws Exception
+    @Test
+    void testSubstringReplacement() throws Exception
     {
-        String tableName = "TABLE_NAME";
+        final String tableName = "TABLE_NAME";
 
-        Column[] columns = new Column[] {
-            new Column("ONLY_SUBSTRING", DataType.CHAR),
-            new Column("START_SUBSTRING", DataType.CHAR),
-            new Column("MIDDLE_SUBSTRING", DataType.CHAR),
-            new Column("END_SUBSTRING", DataType.CHAR),
-            new Column("MULTIPLE_SUBSTRING", DataType.CHAR),
-            new Column("NO_SUBSTRING", DataType.CHAR),
-            new Column("NOT_A_STRING", DataType.NUMERIC),
-            new Column("NULL_VALUE", DataType.CHAR),
-        };
+        final Column[] columns =
+                new Column[] {new Column("ONLY_SUBSTRING", DataType.CHAR),
+                        new Column("START_SUBSTRING", DataType.CHAR),
+                        new Column("MIDDLE_SUBSTRING", DataType.CHAR),
+                        new Column("END_SUBSTRING", DataType.CHAR),
+                        new Column("MULTIPLE_SUBSTRING", DataType.CHAR),
+                        new Column("NO_SUBSTRING", DataType.CHAR),
+                        new Column("NOT_A_STRING", DataType.NUMERIC),
+                        new Column("NULL_VALUE", DataType.CHAR),};
 
         // Setup actual table
-        Object[] actualRow = new Object[] {
-            "substring",
-            "substring_",
-            "_substring_",
-            "_substring",
-            "substringsubstring substring",
-            "this is a string",
-            new Long(0),
-            null,
-        };
+        final Object[] actualRow = new Object[] {"substring", "substring_",
+                "_substring_", "_substring", "substringsubstring substring",
+                "this is a string", Long.valueOf(0), null,};
 
-        DefaultTable originalTable = new DefaultTable(tableName, columns);
+        final DefaultTable originalTable = new DefaultTable(tableName, columns);
         originalTable.addRow(actualRow);
-        ReplacementTable actualTable = new ReplacementTable(originalTable);
+        final ReplacementTable actualTable =
+                new ReplacementTable(originalTable);
         actualTable.addReplacementSubstring("substring", "replacement");
 
         // Setup expected table
-        Object[] expectedRow = new Object[] {
-            "replacement",
-            "replacement_",
-            "_replacement_",
-            "_replacement",
-            "replacementreplacement replacement",
-            "this is a string",
-            new Long(0),
-            null,
-        };
+        final Object[] expectedRow =
+                new Object[] {"replacement", "replacement_", "_replacement_",
+                        "_replacement", "replacementreplacement replacement",
+                        "this is a string", Long.valueOf(0), null,};
 
-        DefaultTable expectedTable = new DefaultTable(tableName, columns);
+        final DefaultTable expectedTable = new DefaultTable(tableName, columns);
         expectedTable.addRow(expectedRow);
 
         Assertion.assertEquals(expectedTable, actualTable);
@@ -170,274 +145,207 @@ public class ReplacementTableTest extends AbstractTableTest
     /**
      * Tests that replacement will fail properly when strict replacement fails.
      */
-    public void testStrictReplacement() throws Exception
+    @Test
+    void testStrictReplacement() throws Exception
     {
-        String tableName = "TABLE_NAME";
-        String replacedColumnName = "REPLACED_COLUMN";
-        String notReplacedColumnName = "NOT_REPLACED_COLUMN";
+        final String tableName = "TABLE_NAME";
+        final String replacedColumnName = "REPLACED_COLUMN";
+        final String notReplacedColumnName = "NOT_REPLACED_COLUMN";
 
-        String replacedValue = "replacement";
-        String notReplacedValue = "badstring";
-        String notReplacedDelimitedValue = "${" + notReplacedValue + "}";
-        
-        Column[] columns = new Column[] {
-            new Column(replacedColumnName, DataType.CHAR),
-            new Column(notReplacedColumnName, DataType.CHAR),
-        };
+        final String replacedValue = "replacement";
+        final String notReplacedValue = "badstring";
+        final String notReplacedDelimitedValue = "${" + notReplacedValue + "}";
+
+        final Column[] columns =
+                new Column[] {new Column(replacedColumnName, DataType.CHAR),
+                        new Column(notReplacedColumnName, DataType.CHAR),};
 
         // Setup actual table
-        Object[] actualRow = new Object[] {
-            "${substring}",
-            notReplacedDelimitedValue,
-        };
+        final Object[] actualRow =
+                new Object[] {"${substring}", notReplacedDelimitedValue,};
 
-        DefaultTable originalTable = new DefaultTable(tableName, columns);
+        final DefaultTable originalTable = new DefaultTable(tableName, columns);
         originalTable.addRow(actualRow);
-        ReplacementTable actualTable = new ReplacementTable(originalTable);
+        final ReplacementTable actualTable =
+                new ReplacementTable(originalTable);
         actualTable.addReplacementSubstring("substring", replacedValue);
         actualTable.setSubstringDelimiters("${", "}");
 
         // Setup expected table
-        Object[] expectedRow = new Object[] {
-            replacedValue,
-            notReplacedDelimitedValue,
-        };
+        final Object[] expectedRow =
+                new Object[] {replacedValue, notReplacedDelimitedValue,};
 
-        DefaultTable expectedTable = new DefaultTable(tableName, columns);
+        final DefaultTable expectedTable = new DefaultTable(tableName, columns);
         expectedTable.addRow(expectedRow);
 
         Assertion.assertEquals(expectedTable, actualTable);
 
-        String foundReplaced = (String) actualTable.getValue(0, replacedColumnName);
-        Assert.assertEquals(replacedValue, foundReplaced);
-        
+        String foundReplaced =
+                (String) actualTable.getValue(0, replacedColumnName);
+        assertThat(foundReplaced).isEqualTo(replacedValue);
+
         // we should get back the non-replaced value with the delimiters in it
-        String foundNotReplaced = (String) actualTable.getValue(0, notReplacedColumnName);
-        Assert.assertEquals(notReplacedDelimitedValue, foundNotReplaced);
-        
+        final String foundNotReplaced =
+                (String) actualTable.getValue(0, notReplacedColumnName);
+        assertThat(foundNotReplaced).isEqualTo(notReplacedDelimitedValue);
+
         // prior to this, it was just testing that it hooks up properly.
         // now try some tests with the strict replacement set
         actualTable.setStrictReplacement(true);
 
         // this should still succeed
         foundReplaced = (String) actualTable.getValue(0, replacedColumnName);
-        Assert.assertEquals(replacedValue, foundReplaced);
+        assertThat(foundReplaced).isEqualTo(replacedValue);
 
         // this should fail
-        boolean failed;
-        try
-        {
-            actualTable.getValue(0, notReplacedColumnName);
-            failed = false;
-        }
-        catch (DataSetException dse)
-        {
-            failed = true;
-        }
-        Assert.assertTrue("Expecting a DataSetException", failed);
-        
+        assertThrows(DataSetException.class,
+                () -> actualTable.getValue(0, notReplacedColumnName),
+                "Expecting a DataSetException");
+
         // try again after adding the badstring as a replacement
-        String replacedValue2 = "replacement2";
+        final String replacedValue2 = "replacement2";
         actualTable.addReplacementSubstring(notReplacedValue, replacedValue2);
         foundReplaced = (String) actualTable.getValue(0, notReplacedColumnName);
-        Assert.assertEquals(replacedValue2, foundReplaced);
+        assertThat(foundReplaced).isEqualTo(replacedValue2);
     }
-    
-    public void testDelimitedSubstringReplacement() throws Exception
-    {
-        String tableName = "TABLE_NAME";
 
-        Column[] columns = new Column[] {
-            new Column("ONLY_SUBSTRING", DataType.CHAR),
-            new Column("START_SUBSTRING", DataType.CHAR),
-            new Column("MIDDLE_SUBSTRING", DataType.CHAR),
-            new Column("END_SUBSTRING", DataType.CHAR),
-            new Column("MULTIPLE_SUBSTRING", DataType.CHAR),
-            new Column("NO_SUBSTRING", DataType.CHAR),
-            new Column("NOT_A_STRING", DataType.NUMERIC),
-            new Column("NULL_VALUE", DataType.CHAR),
-            new Column("ONLY_NONDELIMITED_SUBSTRING", DataType.CHAR),
-            new Column("START_NONDELIMITED_SUBSTRING", DataType.CHAR),
-            new Column("MIDDLE_NONDELIMITED_SUBSTRING", DataType.CHAR),
-            new Column("END_NONDELIMITED_SUBSTRING", DataType.CHAR),
-            new Column("MULTIPLE_NONDELIMITED_SUBSTRING", DataType.CHAR),
-            new Column("BAD_DELIMITED_SUBSTRING1", DataType.CHAR),
-            new Column("BAD_DELIMITED_SUBSTRING2", DataType.CHAR),
-            new Column("BAD_DELIMITED_SUBSTRING3", DataType.CHAR),
-//            new Column("BAD_DELIMITED_SUBSTRING4", DataType.CHAR),
-            new Column("BAD_DELIMITED_SUBSTRING5", DataType.CHAR),
-            new Column("BAD_DELIMITED_SUBSTRING6", DataType.CHAR),
-            new Column("BAD_SUBSTRING1", DataType.CHAR),
-            new Column("BAD_SUBSTRING2", DataType.CHAR),
-        };
+    @Test
+    void testDelimitedSubstringReplacement() throws Exception
+    {
+        final String tableName = "TABLE_NAME";
+
+        final Column[] columns = new Column[] {
+                new Column("ONLY_SUBSTRING", DataType.CHAR),
+                new Column("START_SUBSTRING", DataType.CHAR),
+                new Column("MIDDLE_SUBSTRING", DataType.CHAR),
+                new Column("END_SUBSTRING", DataType.CHAR),
+                new Column("MULTIPLE_SUBSTRING", DataType.CHAR),
+                new Column("NO_SUBSTRING", DataType.CHAR),
+                new Column("NOT_A_STRING", DataType.NUMERIC),
+                new Column("NULL_VALUE", DataType.CHAR),
+                new Column("ONLY_NONDELIMITED_SUBSTRING", DataType.CHAR),
+                new Column("START_NONDELIMITED_SUBSTRING", DataType.CHAR),
+                new Column("MIDDLE_NONDELIMITED_SUBSTRING", DataType.CHAR),
+                new Column("END_NONDELIMITED_SUBSTRING", DataType.CHAR),
+                new Column("MULTIPLE_NONDELIMITED_SUBSTRING", DataType.CHAR),
+                new Column("BAD_DELIMITED_SUBSTRING1", DataType.CHAR),
+                new Column("BAD_DELIMITED_SUBSTRING2", DataType.CHAR),
+                new Column("BAD_DELIMITED_SUBSTRING3", DataType.CHAR),
+                // new Column("BAD_DELIMITED_SUBSTRING4", DataType.CHAR),
+                new Column("BAD_DELIMITED_SUBSTRING5", DataType.CHAR),
+                new Column("BAD_DELIMITED_SUBSTRING6", DataType.CHAR),
+                new Column("BAD_SUBSTRING1", DataType.CHAR),
+                new Column("BAD_SUBSTRING2", DataType.CHAR),};
 
         // Setup actual table
-        Object[] actualRow = new Object[] {
-            "${substring}",
-            "${substring}_",
-            "_${substring}_",
-            "_${substring}",
-            "${substring}${substring} ${substring}",
-            "this is a string",
-            new Long(0),
-            null,
-            "substring",
-            "substring_",
-            "_substring_",
-            "_substring",
-            "substringsubstring substring",
-            "_${substring_",
-            "_$substring}_",
-            "_substring}_",
-            "}",
-            "${",
-//            "${substring${substring} ${substring}",  - Should we support this???
-            "${substringsubstring}${}${}${substring}${}_",
-            "${}",
-        };
+        final Object[] actualRow = new Object[] {"${substring}",
+                "${substring}_", "_${substring}_", "_${substring}",
+                "${substring}${substring} ${substring}", "this is a string",
+                Long.valueOf(0), null, "substring", "substring_", "_substring_",
+                "_substring", "substringsubstring substring", "_${substring_",
+                "_$substring}_", "_substring}_", "}", "${",
+                // "${substring${substring} ${substring}", - Should we support
+                // this???
+                "${substringsubstring}${}${}${substring}${}_", "${}",};
 
-        DefaultTable originalTable = new DefaultTable(tableName, columns);
+        final DefaultTable originalTable = new DefaultTable(tableName, columns);
         originalTable.addRow(actualRow);
-        ReplacementTable actualTable = new ReplacementTable(originalTable);
+        final ReplacementTable actualTable =
+                new ReplacementTable(originalTable);
         actualTable.addReplacementSubstring("substring", "replacement");
         actualTable.setSubstringDelimiters("${", "}");
 
         // Setup expected table
-        Object[] expectedRow = new Object[] {
-            "replacement",
-            "replacement_",
-            "_replacement_",
-            "_replacement",
-            "replacementreplacement replacement",
-            "this is a string",
-            new Long(0),
-            null,
-            "substring",
-            "substring_",
-            "_substring_",
-            "_substring",
-            "substringsubstring substring",
-            "_${substring_",
-            "_$substring}_",
-            "_substring}_",
-            "}",
-            "${",
-//            "${substringreplacement replacement",
-            "${substringsubstring}${}${}replacement${}_",
-            "${}",
-        };
+        final Object[] expectedRow = new Object[] {"replacement",
+                "replacement_", "_replacement_", "_replacement",
+                "replacementreplacement replacement", "this is a string",
+                Long.valueOf(0), null, "substring", "substring_", "_substring_",
+                "_substring", "substringsubstring substring", "_${substring_",
+                "_$substring}_", "_substring}_", "}", "${",
+                // "${substringreplacement replacement",
+                "${substringsubstring}${}${}replacement${}_", "${}",};
 
-        DefaultTable expectedTable = new DefaultTable(tableName, columns);
+        final DefaultTable expectedTable = new DefaultTable(tableName, columns);
         expectedTable.addRow(expectedRow);
 
         Assertion.assertEquals(expectedTable, actualTable);
     }
 
-    public void testDelimitedSubstringReplacementWithIdenticalDelimiters() throws Exception
+    @Test
+    void testDelimitedSubstringReplacementWithIdenticalDelimiters()
+            throws Exception
     {
-        String tableName = "TABLE_NAME";
+        final String tableName = "TABLE_NAME";
 
-        Column[] columns = new Column[] {
-            new Column("ONLY_SUBSTRING", DataType.CHAR),
-            new Column("START_SUBSTRING", DataType.CHAR),
-            new Column("MIDDLE_SUBSTRING", DataType.CHAR),
-            new Column("END_SUBSTRING", DataType.CHAR),
-            new Column("MULTIPLE_SUBSTRING", DataType.CHAR),
-            new Column("NO_SUBSTRING", DataType.CHAR),
-            new Column("NOT_A_STRING", DataType.NUMERIC),
-            new Column("NULL_VALUE", DataType.CHAR),
-            new Column("ONLY_NONDELIMITED_SUBSTRING", DataType.CHAR),
-            new Column("START_NONDELIMITED_SUBSTRING", DataType.CHAR),
-            new Column("MIDDLE_NONDELIMITED_SUBSTRING", DataType.CHAR),
-            new Column("END_NONDELIMITED_SUBSTRING", DataType.CHAR),
-            new Column("MULTIPLE_NONDELIMITED_SUBSTRING", DataType.CHAR),
-            new Column("BAD_DELIMITED_SUBSTRING1", DataType.CHAR),
-            new Column("BAD_DELIMITED_SUBSTRING2", DataType.CHAR),
-//            new Column("BAD_DELIMITED_SUBSTRING4", DataType.CHAR),
-            new Column("BAD_DELIMITED_SUBSTRING5", DataType.CHAR),
-            new Column("BAD_SUBSTRING1", DataType.CHAR),
-            new Column("BAD_SUBSTRING2", DataType.CHAR),
-        };
+        final Column[] columns = new Column[] {
+                new Column("ONLY_SUBSTRING", DataType.CHAR),
+                new Column("START_SUBSTRING", DataType.CHAR),
+                new Column("MIDDLE_SUBSTRING", DataType.CHAR),
+                new Column("END_SUBSTRING", DataType.CHAR),
+                new Column("MULTIPLE_SUBSTRING", DataType.CHAR),
+                new Column("NO_SUBSTRING", DataType.CHAR),
+                new Column("NOT_A_STRING", DataType.NUMERIC),
+                new Column("NULL_VALUE", DataType.CHAR),
+                new Column("ONLY_NONDELIMITED_SUBSTRING", DataType.CHAR),
+                new Column("START_NONDELIMITED_SUBSTRING", DataType.CHAR),
+                new Column("MIDDLE_NONDELIMITED_SUBSTRING", DataType.CHAR),
+                new Column("END_NONDELIMITED_SUBSTRING", DataType.CHAR),
+                new Column("MULTIPLE_NONDELIMITED_SUBSTRING", DataType.CHAR),
+                new Column("BAD_DELIMITED_SUBSTRING1", DataType.CHAR),
+                new Column("BAD_DELIMITED_SUBSTRING2", DataType.CHAR),
+                // new Column("BAD_DELIMITED_SUBSTRING4", DataType.CHAR),
+                new Column("BAD_DELIMITED_SUBSTRING5", DataType.CHAR),
+                new Column("BAD_SUBSTRING1", DataType.CHAR),
+                new Column("BAD_SUBSTRING2", DataType.CHAR),};
 
         // Setup actual table
-        Object[] actualRow = new Object[] {
-            "!substring!",
-            "!substring!_",
-            "_!substring!_",
-            "_!substring!",
-            "!substring!!substring! !substring!",
-            "this is a string",
-            new Long(0),
-            null,
-            "substring",
-            "substring_",
-            "_substring_",
-            "_substring",
-            "substringsubstring substring",
-            "_!substring_",
-            "_substring!_",
-            "!",
-//            "!substring!substring! !substring!",  - Should we support this???
-            "!substringsubstring!!!!!!substring!!!_",
-            "!!",
-        };
+        final Object[] actualRow = new Object[] {"!substring!", "!substring!_",
+                "_!substring!_", "_!substring!",
+                "!substring!!substring! !substring!", "this is a string",
+                Long.valueOf(0), null, "substring", "substring_", "_substring_",
+                "_substring", "substringsubstring substring", "_!substring_",
+                "_substring!_", "!",
+                // "!substring!substring! !substring!", - Should we support
+                // this???
+                "!substringsubstring!!!!!!substring!!!_", "!!",};
 
-        DefaultTable originalTable = new DefaultTable(tableName, columns);
+        final DefaultTable originalTable = new DefaultTable(tableName, columns);
         originalTable.addRow(actualRow);
-        ReplacementTable actualTable = new ReplacementTable(originalTable);
+        final ReplacementTable actualTable =
+                new ReplacementTable(originalTable);
         actualTable.addReplacementSubstring("substring", "replacement");
         actualTable.setSubstringDelimiters("!", "!");
 
         // Setup expected table
-        Object[] expectedRow = new Object[] {
-            "replacement",
-            "replacement_",
-            "_replacement_",
-            "_replacement",
-            "replacementreplacement replacement",
-            "this is a string",
-            new Long(0),
-            null,
-            "substring",
-            "substring_",
-            "_substring_",
-            "_substring",
-            "substringsubstring substring",
-            "_!substring_",
-            "_substring!_",
-            "!",
-//            "!substringreplacement replacement",
-            "!substringsubstring!!!!!replacement!!_",
-            "!!",
-        };
+        final Object[] expectedRow = new Object[] {"replacement",
+                "replacement_", "_replacement_", "_replacement",
+                "replacementreplacement replacement", "this is a string",
+                Long.valueOf(0), null, "substring", "substring_", "_substring_",
+                "_substring", "substringsubstring substring", "_!substring_",
+                "_substring!_", "!",
+                // "!substringreplacement replacement",
+                "!substringsubstring!!!!!replacement!!_", "!!",};
 
-        DefaultTable expectedTable = new DefaultTable(tableName, columns);
+        final DefaultTable expectedTable = new DefaultTable(tableName, columns);
         expectedTable.addRow(expectedRow);
 
         Assertion.assertEquals(expectedTable, actualTable);
     }
 
-    public void testAddNullReplacementSubstring() throws Exception
+    @Test
+    void testAddNullReplacementSubstring() throws Exception
     {
-        ReplacementTable replacementTable =
+        final ReplacementTable replacementTable =
                 new ReplacementTable(new DefaultTable("TABLE"));
-        try
-        {
-            replacementTable.addReplacementSubstring(null, "replacement");
-            fail("Should not be here!");
-        }
-        catch (NullPointerException e)
-        {
-        }
+        assertThrows(
+                NullPointerException.class, () -> replacementTable
+                        .addReplacementSubstring(null, "replacement"),
+                "Should not be here!");
 
-        try
-        {
-            replacementTable.addReplacementSubstring("substring", null);
-            fail("Should not be here!");
-        }
-        catch (NullPointerException e)
-        {
-        }
+        assertThrows(
+                NullPointerException.class, () -> replacementTable
+                        .addReplacementSubstring("substring", null),
+                "Should not be here!");
     }
 
 }
