@@ -21,12 +21,16 @@
 
 package org.dbunit.dataset;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+
 import java.io.File;
 import java.io.IOException;
 
 import org.dbunit.dataset.datatype.DataType;
 import org.dbunit.dataset.xml.FlatXmlDataSetBuilder;
 import org.dbunit.testutil.TestUtils;
+import org.junit.jupiter.api.Test;
 
 /**
  * @author Manuel Laflamme
@@ -34,13 +38,10 @@ import org.dbunit.testutil.TestUtils;
  */
 public class SortedTableTest extends AbstractTableTest
 {
-	private File sortedTableTestFile = TestUtils.getFile("xml/sortedTableTest.xml");
-	
-    public SortedTableTest(String s)
-    {
-        super(s);
-    }
+    private File sortedTableTestFile =
+            TestUtils.getFile("xml/sortedTableTest.xml");
 
+    @Override
     protected ITable createTable() throws Exception
     {
         return createDataSet().getTable("TEST_TABLE");
@@ -51,164 +52,175 @@ public class SortedTableTest extends AbstractTableTest
         return new SortedDataSet(createUnsortedDataSet());
     }
 
-    private IDataSet createUnsortedDataSet() throws DataSetException, IOException 
+    private IDataSet createUnsortedDataSet()
+            throws DataSetException, IOException
     {
-    	return new FlatXmlDataSetBuilder().build(sortedTableTestFile);
+        return new FlatXmlDataSetBuilder().build(sortedTableTestFile);
     }
 
     private ITable createNumericTable() throws Exception
     {
-    	// Create a table that has numeric values in the first column
-    	Column[] columns = new Column[]{
-    			new Column("COLUMN0", DataType.NUMERIC),
-    			new Column("COLUMN1", DataType.VARCHAR)
-    	};
-    	DefaultTable table = new DefaultTable("TEST_TABLE", columns);
-    	Object[] row1 = new Object[]{new Integer(9), "row 9"};
-    	Object[] row2 = new Object[]{new Integer(10), "row 10"};
-    	Object[] row3 = new Object[]{new Integer(11), "row 11"};
-    	table.addRow(row1);
-    	table.addRow(row2);
-    	table.addRow(row3);
-    	return table;
+        // Create a table that has numeric values in the first column
+        final Column[] columns =
+                new Column[] {new Column("COLUMN0", DataType.NUMERIC),
+                        new Column("COLUMN1", DataType.VARCHAR)};
+        final DefaultTable table = new DefaultTable("TEST_TABLE", columns);
+        final Object[] row1 = new Object[] {Integer.valueOf(9), "row 9"};
+        final Object[] row2 = new Object[] {Integer.valueOf(10), "row 10"};
+        final Object[] row3 = new Object[] {Integer.valueOf(11), "row 11"};
+        table.addRow(row1);
+        table.addRow(row2);
+        table.addRow(row3);
+        return table;
     }
-    
-    
-    public void testSetUseComparableTooLate() throws Exception
-    {
-    	ITable table = createTable();
-    	SortedTable sortedTable = new SortedTable(table);
-    	// access a value to initialize the array
-    	sortedTable.getValue(0, "COLUMN0");
-    	// now set the "useComparable" flag which should fail
-    	try
-    	{
-        	sortedTable.setUseComparable(true);
-        	fail("Should not be able to set 'useComparable' after table has already been in use");
-    	}
-    	catch(IllegalStateException expected)
-    	{
-    		String msgStart = "Do not use this method after the table has been used";
-    		assertTrue("Msg should start with: " + msgStart, expected.getMessage().startsWith(msgStart));
-    	}
-    }
-    
-    
-    public void testSortByComparable() throws Exception
-    {
-    	// Sort by column0 which is a numeric column
-        String columnName = "COLUMN0";
 
-        ITable table = createNumericTable();
-        SortedTable sortedTable = new SortedTable(table, new String[]{columnName});
+    @Test
+    void testSetUseComparableTooLate() throws Exception
+    {
+        final ITable table = createTable();
+        final SortedTable sortedTable = new SortedTable(table);
+        // access a value to initialize the array
+        sortedTable.getValue(0, "COLUMN0");
+        // now set the "useComparable" flag which should fail
+        final IllegalStateException expected = assertThrows(
+                IllegalStateException.class,
+                () -> sortedTable.setUseComparable(true),
+                "Should not be able to set 'useComparable' after table has already been in use");
+
+        final String msgStart =
+                "Do not use this method after the table has been used";
+        assertThat(expected).as("Msg should start with: " + msgStart)
+                .hasMessageStartingWith(msgStart);
+
+    }
+
+    @Test
+    void testSortByComparable() throws Exception
+    {
+        // Sort by column0 which is a numeric column
+        final String columnName = "COLUMN0";
+
+        final ITable table = createNumericTable();
+        final SortedTable sortedTable =
+                new SortedTable(table, new String[] {columnName});
         sortedTable.setUseComparable(true);
 
-        Column[] columns = sortedTable.getTableMetaData().getColumns();
-        assertEquals("column count", 2, columns.length);
-        assertEquals("row count", 3, sortedTable.getRowCount());
+        final Column[] columns = sortedTable.getTableMetaData().getColumns();
+        assertThat(columns).as("column count").hasSize(2);
+        assertThat(sortedTable.getRowCount()).as("row count").isEqualTo(3);
 
-        Object[] expected = {new Integer(9), new Integer(10), new Integer(11)};
+        final Object[] expected =
+                {Integer.valueOf(9), Integer.valueOf(10), Integer.valueOf(11)};
         for (int i = 0; i < sortedTable.getRowCount(); i++)
         {
-            assertEquals("value row " + i, expected[i],
-            		sortedTable.getValue(i, columnName));
+            assertThat(sortedTable.getValue(i, columnName)).as("value row " + i)
+                    .isEqualTo(expected[i]);
         }
     }
-    
+
     /**
      * Tests the sort by string which is the default behavior
+     * 
      * @throws Exception
      */
-    public void testSortByString() throws Exception
+    @Test
+    void testSortByString() throws Exception
     {
-    	// Sort by column0 which is a numeric column
-        String columnName = "COLUMN0";
+        // Sort by column0 which is a numeric column
+        final String columnName = "COLUMN0";
 
-        ITable table = createNumericTable();
-        SortedTable sortedTable = new SortedTable(table, new String[]{columnName});
+        final ITable table = createNumericTable();
+        final SortedTable sortedTable =
+                new SortedTable(table, new String[] {columnName});
 
-        Column[] columns = sortedTable.getTableMetaData().getColumns();
-        assertEquals("column count", 2, columns.length);
-        assertEquals("row count", 3, sortedTable.getRowCount());
+        final Column[] columns = sortedTable.getTableMetaData().getColumns();
+        assertThat(columns).as("column count").hasSize(2);
+        assertThat(sortedTable.getRowCount()).as("row count").isEqualTo(3);
 
-        Object[] expected = {new Integer(10), new Integer(11), new Integer(9)};
+        final Object[] expected =
+                {Integer.valueOf(10), Integer.valueOf(11), Integer.valueOf(9)};
         for (int i = 0; i < sortedTable.getRowCount(); i++)
         {
-            assertEquals("value row " + i, expected[i],
-            		sortedTable.getValue(i, columnName));
+            assertThat(sortedTable.getValue(i, columnName)).as("value row " + i)
+                    .isEqualTo(expected[i]);
         }
     }
 
-    
-	public void testGetMissingValue() throws Exception
+    @Override
+    @Test
+    public void testGetMissingValue() throws Exception
     {
-        String columnName = "COLUMN2";
-        Object[] expected = {null, null, null, "0", "1"};
+        final String columnName = "COLUMN2";
+        final Object[] expected = {null, null, null, "0", "1"};
 
-        ITable table = createDataSet().getTable("MISSING_VALUES");
+        final ITable table = createDataSet().getTable("MISSING_VALUES");
 
-        Column[] columns = table.getTableMetaData().getColumns();
-        assertEquals("column count", 3, columns.length);
-        assertEquals("row count", 5, table.getRowCount());
+        final Column[] columns = table.getTableMetaData().getColumns();
+        assertThat(columns).as("column count").hasSize(3);
+        assertThat(table.getRowCount()).as("row count").isEqualTo(5);
         for (int i = 0; i < table.getRowCount(); i++)
         {
-            assertEquals("value row " + i, expected[i],
-                    table.getValue(i, columnName));
+            assertThat(table.getValue(i, columnName)).as("value row " + i)
+                    .isEqualTo(expected[i]);
         }
     }
 
-    public void testCustomColumnsWithUnknownColumnName() throws Exception
+    @Test
+    void testCustomColumnsWithUnknownColumnName() throws Exception
     {
-    	String[] sortColumnNames = new String[] {"COLUMN2", "COLUMNXY_UNDEFINED"};
-    	
-        ITable unsortedTable = createUnsortedDataSet().getTable("MISSING_VALUES");
-        try {
-	        new SortedTable(unsortedTable, sortColumnNames);
-	        fail("Should not be able to create a SortedTable with unexisting columns");
-        }catch(NoSuchColumnException expected) {
-            assertTrue(expected.getMessage().startsWith("MISSING_VALUES.COLUMNXY_UNDEFINED"));
-        }
+        final String[] sortColumnNames =
+                new String[] {"COLUMN2", "COLUMNXY_UNDEFINED"};
+
+        final ITable unsortedTable =
+                createUnsortedDataSet().getTable("MISSING_VALUES");
+        final NoSuchColumnException expected = assertThrows(
+                NoSuchColumnException.class,
+                () -> new SortedTable(unsortedTable, sortColumnNames),
+                "Should not be able to create a SortedTable with unexisting columns");
+
+        assertThat(expected)
+                .hasMessageStartingWith("MISSING_VALUES.COLUMNXY_UNDEFINED");
+
     }
 
-    public void testCustomColumnsWithUnknownColumn() throws Exception
+    @Test
+    void testCustomColumnsWithUnknownColumn() throws Exception
     {
-    	Column[] sortColumns = new Column[] {
-    			new Column("COLUMN2", DataType.UNKNOWN, Column.NULLABLE),
-    			new Column("COLUMNXY_UNDEFINED", DataType.UNKNOWN, Column.NULLABLE) 
-		};
-    	
-        ITable unsortedTable = createUnsortedDataSet().getTable("MISSING_VALUES");
-        try {
-	        new SortedTable(unsortedTable, sortColumns);
-	        fail("Should not be able to create a SortedTable with unexisting columns");
-        }catch(NoSuchColumnException expected) {
-        	assertTrue(expected.getMessage().startsWith("MISSING_VALUES.COLUMNXY_UNDEFINED"));
-        }
+        final Column[] sortColumns = new Column[] {
+                new Column("COLUMN2", DataType.UNKNOWN, Column.NULLABLE),
+                new Column("COLUMNXY_UNDEFINED", DataType.UNKNOWN,
+                        Column.NULLABLE)};
+
+        final ITable unsortedTable =
+                createUnsortedDataSet().getTable("MISSING_VALUES");
+        final NoSuchColumnException expected = assertThrows(
+                NoSuchColumnException.class,
+                () -> new SortedTable(unsortedTable, sortColumns),
+                "Should not be able to create a SortedTable with unexisting columns");
+        assertThat(expected)
+                .hasMessageStartingWith("MISSING_VALUES.COLUMNXY_UNDEFINED");
     }
 
-    public void testCustomColumnsWithDifferentColumnTypesButSameName() throws Exception
+    @Test
+    void testCustomColumnsWithDifferentColumnTypesButSameName() throws Exception
     {
-        Column sortColumn = new Column("COLUMN2", DataType.CHAR, Column.NO_NULLS);
-        Column[] sortColumns = new Column[] { sortColumn };
-        // Use different columns (different datatype) in ITableMetaData that have valid column names
-        ITable unsortedTable = createUnsortedDataSet().getTable("MISSING_VALUES");
-        SortedTable sortedTable = new SortedTable(unsortedTable, sortColumns);
+        final Column sortColumn =
+                new Column("COLUMN2", DataType.CHAR, Column.NO_NULLS);
+        final Column[] sortColumns = new Column[] {sortColumn};
+        // Use different columns (different datatype) in ITableMetaData that
+        // have valid column names
+        final ITable unsortedTable =
+                createUnsortedDataSet().getTable("MISSING_VALUES");
+        final SortedTable sortedTable =
+                new SortedTable(unsortedTable, sortColumns);
         // Check the results
-        Column actualSortColumn = sortedTable.getSortColumns()[0];
-        // The column actually used for sorting must has some different attributes than the one passed in (dataType, nullable) 
-        assertNotSame(sortColumn, actualSortColumn);
-        assertEquals(DataType.UNKNOWN, actualSortColumn.getDataType());
-        assertEquals("COLUMN2", actualSortColumn.getColumnName());
-        assertEquals(Column.NULLABLE, actualSortColumn.getNullable());
+        final Column actualSortColumn = sortedTable.getSortColumns()[0];
+        // The column actually used for sorting must has some different
+        // attributes than the one passed in (dataType, nullable)
+        assertThat(actualSortColumn).isNotSameAs(sortColumn);
+        assertThat(actualSortColumn.getDataType()).isEqualTo(DataType.UNKNOWN);
+        assertThat(actualSortColumn.getColumnName()).isEqualTo("COLUMN2");
+        assertThat(actualSortColumn.getNullable()).isEqualTo(Column.NULLABLE);
     }
 
 }
-
-
-
-
-
-
-
-
-
