@@ -21,255 +21,244 @@
 
 package org.dbunit.dataset.datatype;
 
-import org.dbunit.database.ExtendedMockSingleRowResultSet;
-import org.dbunit.dataset.ITable;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.lenient;
 
 import java.math.BigDecimal;
+import java.sql.ResultSet;
 import java.sql.Types;
+
+import org.dbunit.dataset.ITable;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 /**
  * @author Manuel Laflamme
  * @author Last changed by: $Author$
  * @version $Revision$ $Date$
  */
+@ExtendWith(MockitoExtension.class)
 public class BooleanDataTypeTest extends AbstractDataTypeTest
 {
     private final static DataType THIS_TYPE = DataType.BOOLEAN;
 
-    public BooleanDataTypeTest(String name)
-    {
-        super(name);
-    }
+    @Mock
+    private ResultSet mockedResultSet;
 
     /**
      *
      */
+    @Override
+    @Test
     public void testToString() throws Exception
     {
-        assertEquals("name", "BOOLEAN", THIS_TYPE.toString());
+        assertThat(THIS_TYPE).as("name").hasToString("BOOLEAN");
     }
 
     /**
      *
      */
+    @Override
+    @Test
     public void testGetTypeClass() throws Exception
     {
-        assertEquals("class", Boolean.class, THIS_TYPE.getTypeClass());
+        assertThat(THIS_TYPE.getTypeClass()).as("class")
+                .isEqualTo(Boolean.class);
     }
 
     /**
      *
      */
+    @Override
+    @Test
     public void testIsNumber() throws Exception
     {
-        assertEquals("is number", false, THIS_TYPE.isNumber());
+        assertThat(THIS_TYPE.isNumber()).as("is number").isFalse();
     }
 
+    @Override
+    @Test
     public void testIsDateTime() throws Exception
     {
-        assertEquals("is date/time", false, THIS_TYPE.isDateTime());
+        assertThat(THIS_TYPE.isDateTime()).as("is date/time").isFalse();
     }
 
+    @Override
     public void testTypeCast() throws Exception
     {
-        Object[] values = {
-            null,
-            "1", // Strings
-            "0",
-            "true",
-            "false",
-            "4894358", //TODO should it be possible to cast this into a Boolean?
-            Boolean.TRUE, // Booleans
-            Boolean.FALSE,
-            new Integer(1), // Numbers
-            new Integer(0),
-            new Integer(123), //TODO should it be possible to cast this into a Boolean?
-            new BigDecimal("20.53"), //TODO should it be possible to cast this into a Boolean?
+        final Object[] values = {null, "1", // Strings
+                "0", "true", "false", "4894358", // TODO should it be possible
+                                                 // to cast this into a Boolean?
+                Boolean.TRUE, // Booleans
+                Boolean.FALSE, Integer.valueOf(1), // Numbers
+                Integer.valueOf(0), Integer.valueOf(123), // TODO should it be
+                                                          // possible to cast
+                                                          // this into a
+                                                          // Boolean?
+                new BigDecimal("20.53"), // TODO should it be possible to cast
+                                         // this into a Boolean?
         };
-        Boolean[] expected = {
-            null,
-            Boolean.TRUE, // Strings
-            Boolean.FALSE,
-            Boolean.TRUE,
-            Boolean.FALSE,
-            Boolean.TRUE,
-            Boolean.TRUE, // Booleans
-            Boolean.FALSE,
-            Boolean.TRUE, // Numbers
-            Boolean.FALSE,
-            Boolean.TRUE,
-            Boolean.TRUE,
-        };
+        final Boolean[] expected = {null, Boolean.TRUE, // Strings
+                Boolean.FALSE, Boolean.TRUE, Boolean.FALSE, Boolean.TRUE,
+                Boolean.TRUE, // Booleans
+                Boolean.FALSE, Boolean.TRUE, // Numbers
+                Boolean.FALSE, Boolean.TRUE, Boolean.TRUE,};
 
-        assertEquals("actual vs expected count", values.length, expected.length);
+        assertThat(expected).as("actual vs expected count")
+                .hasSize(values.length);
 
         for (int i = 0; i < values.length; i++)
         {
-            assertEquals("typecast " + i, expected[i],
-                    THIS_TYPE.typeCast(values[i]));
+            assertThat(THIS_TYPE.typeCast(values[i])).as("typecast " + i)
+                    .isEqualTo(expected[i]);
         }
     }
 
+    @Override
+    @Test
     public void testTypeCastNone() throws Exception
     {
-        assertEquals("typecast", null, THIS_TYPE.typeCast(ITable.NO_VALUE));
+        assertThat(THIS_TYPE.typeCast(ITable.NO_VALUE)).as("typecast").isNull();
     }
 
+    @Override
+    @Test
     public void testTypeCastInvalid() throws Exception
     {
-        Object[] values = {"bla"};
+        final Object[] values = {"bla"};
 
         for (int i = 0; i < values.length; i++)
         {
-            try
-            {
-                THIS_TYPE.typeCast(values[i]);
-                fail("Should throw TypeCastException");
-            }
-            catch (TypeCastException e)
-            {
-            }
+            final int id = i;
+            assertThrows(TypeCastException.class,
+                    () -> THIS_TYPE.typeCast(values[id]),
+                    "Should throw TypeCastException");
         }
     }
 
+    @Override
+    @Test
     public void testCompareEquals() throws Exception
     {
-        Object[] values1 = {
-            null,
-            "1",
-            "0",
-            Boolean.TRUE,
-            Boolean.FALSE,
-        };
-        Object[] values2 = {
-            null,
-            Boolean.TRUE,
-            Boolean.FALSE,
-            "true",
-            "false",
-        };
+        final Object[] values1 = {null, "1", "0", Boolean.TRUE, Boolean.FALSE,};
+        final Object[] values2 =
+                {null, Boolean.TRUE, Boolean.FALSE, "true", "false",};
 
-        assertEquals("values count", values1.length, values2.length);
+        assertThat(values2).as("values count").hasSize(values1.length);
 
         for (int i = 0; i < values1.length; i++)
         {
-            assertEquals("compare1 " + i,
-                    0, THIS_TYPE.compare(values1[i], values2[i]));
-            assertEquals("compare2 " + i,
-                    0, THIS_TYPE.compare(values2[i], values1[i]));
+            assertThat(THIS_TYPE.compare(values1[i], values2[i]))
+                    .as("compare1 " + i).isZero();
+            assertThat(THIS_TYPE.compare(values2[i], values1[i]))
+                    .as("compare2 " + i).isZero();
         }
     }
 
+    @Override
+    @Test
     public void testCompareInvalid() throws Exception
     {
-        Object[] values1 = {
-            "bla",
-            Boolean.FALSE,
-        };
-        Object[] values2 = {
-            Boolean.TRUE,
-            "bla",
-        };
+        final Object[] values1 = {"bla", Boolean.FALSE,};
+        final Object[] values2 = {Boolean.TRUE, "bla",};
 
-        assertEquals("values count", values1.length, values2.length);
+        assertThat(values2).as("values count").hasSize(values1.length);
 
         for (int i = 0; i < values1.length; i++)
         {
-            try
-            {
-                THIS_TYPE.compare(values1[i], values2[i]);
-                fail("Should have throw TypeCastException");
-            }
-            catch (TypeCastException e)
-            {
+            final int id = i;
+            assertThrows(TypeCastException.class,
+                    () -> THIS_TYPE.compare(values1[id], values2[id]),
+                    "Should have throw TypeCastException");
 
-            }
-
-            try
-            {
-                THIS_TYPE.compare(values2[i], values1[i]);
-                fail("Should have throw TypeCastException");
-            }
-            catch (TypeCastException e)
-            {
-
-            }
+            assertThrows(TypeCastException.class,
+                    () -> THIS_TYPE.compare(values2[id], values1[id]),
+                    "Should have throw TypeCastException");
         }
     }
 
+    @Override
+    @Test
     public void testCompareDifferent() throws Exception
     {
-        Object[] less = {
-            null,
-            null,
-            Boolean.FALSE,
-        };
-        Object[] greater = {
-            Boolean.TRUE,
-            Boolean.FALSE,
-            Boolean.TRUE,
-        };
+        final Object[] less = {null, null, Boolean.FALSE,};
+        final Object[] greater = {Boolean.TRUE, Boolean.FALSE, Boolean.TRUE,};
 
-        assertEquals("values count", less.length, greater.length);
+        assertThat(greater).as("values count").hasSize(less.length);
 
         for (int i = 0; i < less.length; i++)
         {
-            assertTrue("less " + i, THIS_TYPE.compare(less[i], greater[i]) < 0);
-            assertTrue("greater " + i, THIS_TYPE.compare(greater[i], less[i]) > 0);
+            assertThat(THIS_TYPE.compare(less[i], greater[i])).as("less " + i)
+                    .isNegative();
+            assertThat(THIS_TYPE.compare(greater[i], less[i]))
+                    .as("greater " + i).isPositive();
         }
     }
 
+    @Override
+    @Test
     public void testSqlType() throws Exception
     {
-        assertEquals("forSqlType", THIS_TYPE, DataType.forSqlType(Types.BOOLEAN));
-        assertEquals("forSqlTypeName", THIS_TYPE, DataType.forSqlTypeName(THIS_TYPE.toString()));
-        assertEquals("getSqlType", Types.BOOLEAN, THIS_TYPE.getSqlType());
+        assertThat(DataType.forSqlType(Types.BOOLEAN)).as("forSqlType")
+                .isEqualTo(THIS_TYPE);
+        assertThat(DataType.forSqlTypeName(THIS_TYPE.toString()))
+                .as("forSqlTypeName").isEqualTo(THIS_TYPE);
+        assertThat(THIS_TYPE.getSqlType()).as("getSqlType")
+                .isEqualTo(Types.BOOLEAN);
     }
 
+    @Override
+    @Test
     public void testForObject() throws Exception
     {
-        assertEquals(THIS_TYPE, DataType.forObject(Boolean.TRUE));
+        assertThat(DataType.forObject(Boolean.TRUE)).isEqualTo(THIS_TYPE);
     }
 
     /**
      *
      */
+    @Override
+    @Test
     public void testAsString() throws Exception
     {
-        Boolean[] values = {
-            Boolean.TRUE,
-            Boolean.FALSE,
-        };
+        final Boolean[] values = {Boolean.TRUE, Boolean.FALSE,};
 
-        String[] expected = {
-            "true",
-            "false",
-        };
+        final String[] expected = {"true", "false",};
 
-        assertEquals("actual vs expected count", values.length, expected.length);
+        assertThat(expected).as("actual vs expected count")
+                .hasSize(values.length);
 
         for (int i = 0; i < values.length; i++)
         {
-            assertEquals("asString " + i, expected[i], DataType.asString(values[i]));
+            assertThat(DataType.asString(values[i])).as("asString " + i)
+                    .isEqualTo(expected[i]);
         }
     }
 
+    @Override
+    @Test
     public void testGetSqlValue() throws Exception
     {
-        Object[] expected = new Object[] {
-            null,
-            Boolean.TRUE,
-            Boolean.FALSE,
-        };
-
-        ExtendedMockSingleRowResultSet resultSet = new ExtendedMockSingleRowResultSet();
-        resultSet.addExpectedIndexedValues(expected);
+        final Object[] expected =
+                new Object[] {null, Boolean.TRUE, Boolean.FALSE,};
+        // First invocation we want to say it was null using lenient to ignore
+        // the first call
+        lenient().when(mockedResultSet.wasNull()).thenReturn(true)
+                .thenReturn(false);
+        lenient().when(mockedResultSet.getBoolean(2))
+                .thenReturn((boolean) expected[1]);
+        lenient().when(mockedResultSet.getBoolean(3))
+                .thenReturn((boolean) expected[2]);
 
         for (int i = 0; i < expected.length; i++)
         {
-            Object expectedValue = expected[i];
-            Object actualValue = THIS_TYPE.getSqlValue(i + 1, resultSet);
-            assertEquals("value", expectedValue, actualValue);
+            final Object expectedValue = expected[i];
+            final Object actualValue =
+                    THIS_TYPE.getSqlValue(i + 1, mockedResultSet);
+            assertThat(actualValue).as("value").isEqualTo(expectedValue);
         }
     }
 }
