@@ -21,359 +21,348 @@
 
 package org.dbunit.dataset.datatype;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
 import java.io.ByteArrayInputStream;
 import java.io.File;
+import java.sql.PreparedStatement;
+import java.sql.ResultSet;
 import java.sql.Types;
-import java.util.Arrays;
 
-import org.dbunit.database.ExtendedMockSingleRowResultSet;
-import org.dbunit.database.statement.MockPreparedStatement;
 import org.dbunit.dataset.ITable;
 import org.dbunit.testutil.FileAsserts;
-
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 /**
  * @author Manuel Laflamme
  * @version $Revision$
  */
-public class BytesDataTypeTest extends AbstractDataTypeTest
+@ExtendWith(MockitoExtension.class)
+class BytesDataTypeTest extends AbstractDataTypeTest
 {
-    private final static DataType[] TYPES = {
-        DataType.BINARY,
-        DataType.VARBINARY,
-        DataType.LONGVARBINARY,
-//        DataType.BLOB,
-    };
 
-    public BytesDataTypeTest(String name)
-    {
-        super(name);
-    }
+    @Mock
+    private PreparedStatement preparedStatement;
 
+    @Mock
+    private ResultSet mockedResultSet;
+
+    private final static DataType[] TYPES =
+            {DataType.BINARY, DataType.VARBINARY, DataType.LONGVARBINARY,
+            // DataType.BLOB,
+            };
+
+    @Override
+    @Test
     public void testToString() throws Exception
     {
-        String[] expected = {
-            "BINARY",
-            "VARBINARY",
-            "LONGVARBINARY",
-//            "BLOB",
+        final String[] expected = {"BINARY", "VARBINARY", "LONGVARBINARY",
+                // "BLOB",
         };
 
-        assertEquals("type count", expected.length, TYPES.length);
+        assertThat(TYPES).as("type count").hasSize(expected.length);
         for (int i = 0; i < TYPES.length; i++)
         {
-            assertEquals("name", expected[i], TYPES[i].toString());
+            assertThat(TYPES[i]).as("name").hasToString(expected[i]);
         }
     }
 
+    @Override
+    @Test
     public void testGetTypeClass() throws Exception
     {
         for (int i = 0; i < TYPES.length; i++)
         {
-            assertEquals("class", byte[].class, TYPES[i].getTypeClass());
+            assertThat(TYPES[i].getTypeClass()).as("class")
+                    .isEqualTo(byte[].class);
         }
     }
 
+    @Override
+    @Test
     public void testIsNumber() throws Exception
     {
         for (int i = 0; i < TYPES.length; i++)
         {
-            assertEquals("is number", false, TYPES[i].isNumber());
+            assertThat(TYPES[i].isNumber()).as("is number").isFalse();
         }
     }
 
+    @Override
+    @Test
     public void testIsDateTime() throws Exception
     {
         for (int i = 0; i < TYPES.length; i++)
         {
-            assertEquals("is date/time", false, TYPES[i].isDateTime());
+            assertThat(TYPES[i].isDateTime()).as("is date/time").isFalse();
         }
     }
 
+    @Override
+    @Test
     public void testTypeCast() throws Exception
     {
-        Object[] values = {
-            null,
-            "",
-            "YWJjZA==",
-            new byte[]{0, 1, 2, 3, 4, 5},
-            "[text]This is text with UTF-8 (the default) characters >>àéç<<",
-            "[text UTF-8]This is text with UTF-8 (the default) characters >>àéç<<",
-            "[text]c27ccbf5-6ca1-4bdd-8cb0-bacfea6a5a8b",
-            "[base64]VGhpcyBpcyBhIHRlc3QgZm9yIGJhc2U2NC4K=="
-        };
+        final Object[] values = {null, "", "YWJjZA==",
+                new byte[] {0, 1, 2, 3, 4, 5},
+                "[text]This is text with UTF-8 (the default) characters >>àéç<<",
+                "[text UTF-8]This is text with UTF-8 (the default) characters >>àéç<<",
+                "[text]c27ccbf5-6ca1-4bdd-8cb0-bacfea6a5a8b",
+                "[base64]VGhpcyBpcyBhIHRlc3QgZm9yIGJhc2U2NC4K=="};
 
-        byte[][] expected = {
-            null,
-            new byte[0],
-            new byte[]{'a', 'b', 'c', 'd'},
-            new byte[]{0, 1, 2, 3, 4, 5},
-            values[4].toString().replaceAll("\\[.*?\\]", "").getBytes("UTF-8"),
-            values[5].toString().replaceAll("\\[.*?\\]", "").getBytes("UTF-8"),
-            values[6].toString().replaceAll("\\[.*?\\]", "").getBytes("UTF-8"),
-            "This is a test for base64.\n".getBytes(),
-        };
+        final byte[][] expected = {null, new byte[0],
+                new byte[] {'a', 'b', 'c', 'd'}, new byte[] {0, 1, 2, 3, 4, 5},
+                values[4].toString().replaceAll("\\[.*?\\]", "")
+                        .getBytes("UTF-8"),
+                values[5].toString().replaceAll("\\[.*?\\]", "")
+                        .getBytes("UTF-8"),
+                values[6].toString().replaceAll("\\[.*?\\]", "").getBytes(
+                        "UTF-8"),
+                "This is a test for base64.\n".getBytes(),};
 
-        assertEquals("actual vs expected count", values.length, expected.length);
+        assertThat(expected).as("actual vs expected count")
+                .hasNumberOfRows(values.length);
 
         for (int i = 0; i < TYPES.length; i++)
         {
             for (int j = 0; j < values.length; j++)
             {
-                byte[] actual = (byte[])TYPES[i].typeCast(values[j]);
-                assertTrue("typecast " + j, Arrays.equals(expected[j], actual));
+                final byte[] actual = (byte[]) TYPES[i].typeCast(values[j]);
+                assertThat(actual).as("typecast " + j).isEqualTo(expected[j]);
             }
         }
     }
 
-    public void testTypeCastFileName() throws Exception
+    @Test
+    void testTypeCastFileName() throws Exception
     {
-        File file = new File("LICENSE.txt");
+        final File file = new File("LICENSE.txt");
 
-        Object[] values = {
-            "[file]" + file.toString(),
-            file.toString(),
-            file.getAbsolutePath(),
-            file.toURI().toURL().toString(),
-            file,
-            file.toURI().toURL(),
-            "[url]" + file.toURI().toURL(),
-        };
+        final Object[] values = {"[file]" + file.toString(), file.toString(),
+                file.getAbsolutePath(), file.toURI().toURL().toString(), file,
+                file.toURI().toURL(), "[url]" + file.toURI().toURL(),};
 
-        assertEquals("exists", true, file.exists());
+        assertThat(file).as("exists").exists();
 
         for (int i = 0; i < TYPES.length; i++)
         {
             for (int j = 0; j < values.length; j++)
             {
-                byte[] actual = (byte[])TYPES[i].typeCast(values[j]);
-                FileAsserts.assertEquals(new ByteArrayInputStream(actual), file);
+                final byte[] actual = (byte[]) TYPES[i].typeCast(values[j]);
+                FileAsserts.assertEquals(new ByteArrayInputStream(actual),
+                        file);
             }
         }
     }
 
+    @Override
+    @Test
     public void testTypeCastNone() throws Exception
     {
         for (int i = 0; i < TYPES.length; i++)
         {
-            DataType type = TYPES[i];
-            assertEquals("typecast " + type, null, type.typeCast(ITable.NO_VALUE));
+            final DataType type = TYPES[i];
+            assertThat(type.typeCast(ITable.NO_VALUE)).as("typecast " + type)
+                    .isNull();
         }
     }
 
+    @Override
+    @Test
     public void testTypeCastInvalid() throws Exception
     {
-        Object[] values = {
-            new Object(),
-            new Integer(1234),
-        };
+        final Object[] values = {new Object(), Integer.valueOf(1234),};
 
         for (int i = 0; i < TYPES.length; i++)
         {
             for (int j = 0; j < values.length; j++)
             {
-                try
-                {
-                    TYPES[i].typeCast(values[j]);
-                    fail("Should throw TypeCastException: " + values[j]);
-                }
-                catch (TypeCastException e)
-                {
-                }
+                final int id = i;
+                final int jd = j;
+                assertThrows(TypeCastException.class,
+                        () -> TYPES[id].typeCast(values[jd]),
+                        "Should throw TypeCastException: " + values[jd]);
             }
         }
     }
 
+    @Override
+    @Test
     public void testCompareEquals() throws Exception
     {
-        Object[] values1 = {
-            null,
-            "",
-            "YWJjZA==",
-            new byte[]{0, 1, 2, 3, 4, 5},
-        };
+        final Object[] values1 =
+                {null, "", "YWJjZA==", new byte[] {0, 1, 2, 3, 4, 5},};
 
-        byte[][] values2 = {
-            null,
-            new byte[0],
-            new byte[]{'a', 'b', 'c', 'd'},
-            new byte[]{0, 1, 2, 3, 4, 5},
-        };
+        final byte[][] values2 =
+                {null, new byte[0], new byte[] {'a', 'b', 'c', 'd'},
+                        new byte[] {0, 1, 2, 3, 4, 5},};
 
-        assertEquals("values count", values1.length, values2.length);
+        assertThat(values2).as("values count").hasNumberOfRows(values1.length);
 
         for (int i = 0; i < TYPES.length; i++)
         {
             for (int j = 0; j < values1.length; j++)
             {
-                assertEquals("compare1 " + j, 0, TYPES[i].compare(values1[j], values2[j]));
-                assertEquals("compare2 " + j, 0, TYPES[i].compare(values2[j], values1[j]));
+                assertThat(TYPES[i].compare(values1[j], values2[j]))
+                        .as("compare1 " + j).isZero();
+                assertThat(TYPES[i].compare(values2[j], values1[j]))
+                        .as("compare2 " + j).isZero();
             }
         }
     }
 
+    @Override
+    @Test
     public void testCompareInvalid() throws Exception
     {
-        Object[] values1 = {
-            new Object(),
-            new java.util.Date()
-        };
-        Object[] values2 = {
-            null,
-            null
-        };
+        final Object[] values1 = {new Object(), new java.util.Date()};
+        final Object[] values2 = {null, null};
 
-        assertEquals("values count", values1.length, values2.length);
+        assertThat(values2).as("values count").hasSize(values1.length);
 
         for (int i = 0; i < TYPES.length; i++)
         {
             for (int j = 0; j < values1.length; j++)
             {
-                try
-                {
-                    TYPES[i].compare(values1[j], values2[j]);
-                    fail("Should throw TypeCastException");
-                }
-                catch (TypeCastException e)
-                {
-                }
+                final int id = i;
+                final int jd = j;
+                assertThrows(TypeCastException.class,
+                        () -> TYPES[id].compare(values1[jd], values2[jd]),
+                        "Should throw TypeCastException");
 
-                try
-                {
-                    TYPES[i].compare(values2[j], values1[j]);
-                    fail("Should throw TypeCastException");
-                }
-                catch (TypeCastException e)
-                {
-                }
+                assertThrows(TypeCastException.class,
+                        () -> TYPES[id].compare(values2[jd], values1[jd]),
+                        "Should throw TypeCastException");
             }
         }
     }
 
+    @Override
+    @Test
     public void testCompareDifferent() throws Exception
     {
-        Object[] less = {
-            null,
-            new byte[]{'a', 'a', 'c', 'd'},
-            new byte[]{0, 1, 2, 3, 4, 5},
-        };
-        Object[] greater = {
-            new byte[0],
-            new byte[]{'a', 'b', 'c', 'd'},
-            new byte[]{0, 1, 2, 3, 4, 5, 6},
-        };
+        final Object[] less = {null, new byte[] {'a', 'a', 'c', 'd'},
+                new byte[] {0, 1, 2, 3, 4, 5},};
+        final Object[] greater = {new byte[0], new byte[] {'a', 'b', 'c', 'd'},
+                new byte[] {0, 1, 2, 3, 4, 5, 6},};
 
-        assertEquals("values count", less.length, greater.length);
+        assertThat(greater).as("values count").hasSize(less.length);
 
         for (int i = 0; i < TYPES.length; i++)
         {
             for (int j = 0; j < less.length; j++)
             {
-                assertTrue("less " + j, TYPES[i].compare(less[j], greater[j]) < 0);
-                assertTrue("greater " + j, TYPES[i].compare(greater[j], less[j]) > 0);
+                assertThat(TYPES[i].compare(less[j], greater[j]))
+                        .as("less " + j).isNegative();
+                assertThat(TYPES[i].compare(greater[j], less[j]))
+                        .as("greater " + j).isPositive();
             }
         }
     }
 
+    @Override
+    @Test
     public void testSqlType() throws Exception
     {
-        int[] sqlTypes = {
-            Types.BINARY,
-            Types.VARBINARY,
-            Types.LONGVARBINARY,
-//            Types.BLOB,
-        };
+        final int[] sqlTypes =
+                {Types.BINARY, Types.VARBINARY, Types.LONGVARBINARY,
+                // Types.BLOB,
+                };
 
-        assertEquals("count", sqlTypes.length, TYPES.length);
+        assertThat(TYPES).as("count").hasSize(sqlTypes.length);
         for (int i = 0; i < TYPES.length; i++)
         {
-            assertEquals("forSqlType", TYPES[i], DataType.forSqlType(sqlTypes[i]));
-            assertEquals("forSqlTypeName", TYPES[i], DataType.forSqlTypeName(TYPES[i].toString()));
-            assertEquals("getSqlType", sqlTypes[i], TYPES[i].getSqlType());
+            assertThat(DataType.forSqlType(sqlTypes[i])).as("forSqlType")
+                    .isEqualTo(TYPES[i]);
+            assertThat(DataType.forSqlTypeName(TYPES[i].toString()))
+                    .as("forSqlTypeName").isEqualTo(TYPES[i]);
+            assertThat(TYPES[i].getSqlType()).as("getSqlType")
+                    .isEqualTo(sqlTypes[i]);
         }
     }
 
+    @Override
+    @Test
     public void testForObject() throws Exception
     {
-        assertEquals(DataType.VARBINARY, DataType.forObject(new byte[0]));
+        assertThat(DataType.forObject(new byte[0]))
+                .isEqualTo(DataType.VARBINARY);
     }
 
+    @Override
+    @Test
     public void testAsString() throws Exception
     {
-        byte[][] values = {
-            new byte[0],
-            new byte[]{'a', 'b', 'c', 'd'},
-        };
+        final byte[][] values = {new byte[0], new byte[] {'a', 'b', 'c', 'd'},};
 
-        String[] expected = {
-            "",
-            "YWJjZA==",
-        };
+        final String[] expected = {"", "YWJjZA==",};
 
-        assertEquals("actual vs expected count", values.length, expected.length);
+        assertThat(expected).as("actual vs expected count")
+                .hasSize(values.length);
 
         for (int i = 0; i < values.length; i++)
         {
-            assertEquals("asString " + i, expected[i], DataType.asString(values[i]));
+            assertThat(DataType.asString(values[i])).as("asString " + i)
+                    .isEqualTo(expected[i]);
         }
     }
 
+    @Override
+    @Test
     public void testGetSqlValue() throws Exception
     {
-        byte[][] expected = {
-            null,
-            new byte[0],
-            new byte[]{'a', 'b', 'c', 'd'},
-            new byte[]{0, 1, 2, 3, 4, 5},
-        };
+        final byte[][] expected =
+                {null, new byte[0], new byte[] {'a', 'b', 'c', 'd'},
+                        new byte[] {0, 1, 2, 3, 4, 5},};
 
-        ExtendedMockSingleRowResultSet resultSet = new ExtendedMockSingleRowResultSet();
-        resultSet.addExpectedIndexedValues(expected);
-
+        when(mockedResultSet.getBytes(1)).thenReturn(expected[0]);
+        when(mockedResultSet.getBytes(2)).thenReturn(expected[1]);
+        when(mockedResultSet.getBytes(3)).thenReturn(expected[2]);
+        when(mockedResultSet.getBytes(4)).thenReturn(expected[3]);
         for (int i = 0; i < expected.length; i++)
         {
-            Object expectedValue = expected[i];
+            final Object expectedValue = expected[i];
 
             for (int j = 0; j < TYPES.length; j++)
             {
-                DataType dataType = TYPES[j];
-                Object actualValue = dataType.getSqlValue(i + 1, resultSet);
-                assertEquals("value " + j, expectedValue, actualValue);
+                final DataType dataType = TYPES[j];
+                final Object actualValue =
+                        dataType.getSqlValue(i + 1, mockedResultSet);
+                assertThat(actualValue).as("value " + j)
+                        .isEqualTo(expectedValue);
             }
         }
     }
 
-    public void testSetSqlValue() throws Exception
+    @Test
+    void testSetSqlValue() throws Exception
     {
-    	MockPreparedStatement preparedStatement = new MockPreparedStatement();
 
-        Object[] expected = {
-                null,
-                new byte[0],
-                new byte[]{'a', 'b', 'c', 'd'},
-        };
+        final Object[] expected =
+                {null, new byte[0], new byte[] {'a', 'b', 'c', 'd'},};
 
-        int[] expectedSqlTypesForDataType = {
-        		Types.BINARY,
-                Types.VARBINARY,
-                Types.LONGVARBINARY
-        };
+        final int[] expectedSqlTypesForDataType =
+                {Types.BINARY, Types.VARBINARY, Types.LONGVARBINARY};
 
         for (int i = 0; i < expected.length; i++)
         {
-            Object expectedValue = expected[i];
+            final Object expectedValue = expected[i];
 
             for (int j = 0; j < TYPES.length; j++)
             {
-                DataType dataType = TYPES[j];
-                int expectedSqlType = expectedSqlTypesForDataType[j];
+                final DataType dataType = TYPES[j];
+                final int expectedSqlType = expectedSqlTypesForDataType[j];
 
                 dataType.setSqlValue(expectedValue, 1, preparedStatement);
                 // Check the results immediately
-                assertEquals("Loop " + i + " Type " + dataType, 1, preparedStatement.getLastSetObjectParamIndex());
-                assertEquals("Loop " + i + " Type " + dataType, expectedSqlType, preparedStatement.getLastSetObjectTargetSqlType());
-                Object actualValue = preparedStatement.getLastSetObjectParamValue();
-                assertEquals("Loop " + i + " Type " + dataType, expectedValue, actualValue);
+                verify(preparedStatement, times(1)).setObject(1, expectedValue,
+                        expectedSqlType);
             }
         }
     }
