@@ -21,9 +21,11 @@
 
 package org.dbunit.dataset.datatype;
 
-import org.dbunit.database.ExtendedMockSingleRowResultSet;
-import org.dbunit.dataset.ITable;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.when;
 
+import java.sql.ResultSet;
 import java.sql.Time;
 import java.sql.Timestamp;
 import java.sql.Types;
@@ -31,112 +33,115 @@ import java.time.Clock;
 import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
 
+import org.dbunit.dataset.ITable;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+
 /**
  * @author Manuel Laflamme
  * @version $Revision$
  */
-
-public class DateDataTypeTest extends AbstractDataTypeTest
+@ExtendWith(MockitoExtension.class)
+class DateDataTypeTest extends AbstractDataTypeTest
 {
     private final static DataType THIS_TYPE = DataType.DATE;
 
-    public DateDataTypeTest(String name)
-    {
-        super(name);
-    }
+    @Mock
+    private ResultSet mockedResultSet;
 
     /**
      *
      */
+    @Override
+    @Test
     public void testToString() throws Exception
     {
-        assertEquals("name", "DATE", THIS_TYPE.toString());
+        assertThat(THIS_TYPE).as("name").hasToString("DATE");
     }
 
     /**
      *
      */
+    @Override
+    @Test
     public void testGetTypeClass() throws Exception
     {
-        assertEquals("class", java.sql.Date.class, THIS_TYPE.getTypeClass());
+        assertThat(THIS_TYPE.getTypeClass()).as("class")
+                .isEqualTo(java.sql.Date.class);
     }
 
     /**
      *
      */
+    @Override
+    @Test
     public void testIsNumber() throws Exception
     {
-        assertEquals("is number", false, THIS_TYPE.isNumber());
+        assertThat(THIS_TYPE.isNumber()).as("is number").isFalse();
     }
 
+    @Override
+    @Test
     public void testIsDateTime() throws Exception
     {
-        assertEquals("is date/time", true, THIS_TYPE.isDateTime());
+        assertThat(THIS_TYPE.isDateTime()).as("is date/time").isTrue();
     }
 
+    @Override
     public void testTypeCast() throws Exception
     {
-        Object[] values = {
-            null,
-            new java.sql.Date(1234),
-            new Time(1234),
-            new Timestamp(1234),
-            new java.sql.Date(1234).toString(),
-            new Timestamp(1234).toString(),
-            new java.util.Date(1234),
-        };
+        final Object[] values = {null, new java.sql.Date(1234), new Time(1234),
+                new Timestamp(1234), new java.sql.Date(1234).toString(),
+                new Timestamp(1234).toString(), new java.util.Date(1234),};
 
-        java.sql.Date[] expected = {
-            null,
-            new java.sql.Date(1234),
-            new java.sql.Date(new Time(1234).getTime()),
-            new java.sql.Date(new Timestamp(1234).getTime()),
-            java.sql.Date.valueOf(new java.sql.Date(1234).toString()),
-            new java.sql.Date(
-                    Timestamp.valueOf(new Timestamp(1234).toString()).getTime()),
-            new java.sql.Date(1234),
-        };
+        final java.sql.Date[] expected = {null, new java.sql.Date(1234),
+                new java.sql.Date(new Time(1234).getTime()),
+                new java.sql.Date(new Timestamp(1234).getTime()),
+                java.sql.Date.valueOf(new java.sql.Date(1234).toString()),
+                new java.sql.Date(Timestamp
+                        .valueOf(new Timestamp(1234).toString()).getTime()),
+                new java.sql.Date(1234),};
 
-        assertEquals("actual vs expected count", values.length, expected.length);
+        assertThat(expected).as("actual vs expected count")
+                .hasSize(values.length);
 
         for (int i = 0; i < values.length; i++)
         {
-            assertEquals("typecast " + i, expected[i],
-                    THIS_TYPE.typeCast(values[i]));
+            assertThat(THIS_TYPE.typeCast(values[i])).as("typecast " + i)
+                    .isEqualTo(expected[i]);
         }
     }
 
+    @Override
+    @Test
     public void testTypeCastNone() throws Exception
     {
-        assertEquals("typecast", null, THIS_TYPE.typeCast(ITable.NO_VALUE));
+        assertThat(THIS_TYPE.typeCast(ITable.NO_VALUE)).as("typecast").isNull();
     }
 
+    @Override
+    @Test
     public void testTypeCastInvalid() throws Exception
     {
-        Object[] values = {
-            new Integer(1234),
-            new Object(),
-            "bla",
-            "2000.05.05",
-        };
+        final Object[] values =
+                {Integer.valueOf(1234), new Object(), "bla", "2000.05.05",};
 
         for (int i = 0; i < values.length; i++)
         {
-            try
-            {
-                THIS_TYPE.typeCast(values[i]);
-                fail("Should throw TypeCastException - " + i);
-            }
-            catch (TypeCastException e)
-            {
-            }
+            final int id = i;
+            assertThrows(TypeCastException.class,
+                    () -> THIS_TYPE.typeCast(values[id]),
+                    "Should throw TypeCastException - " + id);
         }
     }
 
-    public void testTypeCastRelative() throws Exception
+    @Test
+    void testTypeCastRelative() throws Exception
     {
         // @formatter:off
-        Object[] values = {
+        final Object[] values = {
                 "[now]",
                 "[Now+1d]",
                 "[noW+24h]",
@@ -144,10 +149,10 @@ public class DateDataTypeTest extends AbstractDataTypeTest
                 "[NOW+5d-2M+3y]",
         };
 
-        Clock clock = DataType.RELATIVE_DATE_TIME_PARSER.getClock();
+        final Clock clock = DataType.RELATIVE_DATE_TIME_PARSER.getClock();
 
-        LocalDate today = LocalDate.now(clock);
-        java.sql.Date[] expected = {
+        final LocalDate today = LocalDate.now(clock);
+        final java.sql.Date[] expected = {
                 java.sql.Date.valueOf(today),
                 java.sql.Date.valueOf(today.plus(1, ChronoUnit.DAYS)),
                 java.sql.Date.valueOf(today.plus(1, ChronoUnit.DAYS)),
@@ -159,157 +164,136 @@ public class DateDataTypeTest extends AbstractDataTypeTest
         };
         // @formatter:on
 
-        assertEquals("actual vs expected count", values.length,
-                expected.length);
+        assertThat(expected).as("actual vs expected count")
+                .hasSize(values.length);
 
         // Create a new instance to test relative date/time.
-        DateDataType thisType = new DateDataType();
+        final DateDataType thisType = new DateDataType();
         for (int i = 0; i < values.length; i++)
         {
-            assertEquals("typecast " + i, expected[i],
-                    thisType.typeCast(values[i]));
+            assertThat(thisType.typeCast(values[i])).as("typecast " + i)
+                    .isEqualTo(expected[i]);
         }
     }
 
+    @Override
+    @Test
     public void testCompareEquals() throws Exception
     {
-        Object[] values1 = {
-            null,
-            new java.sql.Date(1234),
-            new Time(1234),
-            new Timestamp(1234),
-            new java.sql.Date(1234).toString(),
-            new java.util.Date(1234),
-            "2003-01-30"
-        };
+        final Object[] values1 = {null, new java.sql.Date(1234), new Time(1234),
+                new Timestamp(1234), new java.sql.Date(1234).toString(),
+                new java.util.Date(1234), "2003-01-30"};
 
-        Object[] values2 = {
-            null,
-            new java.sql.Date(1234),
-            new java.sql.Date(new Time(1234).getTime()),
-            new java.sql.Date(new Timestamp(1234).getTime()),
-            java.sql.Date.valueOf(new java.sql.Date(1234).toString()),
-            new java.sql.Date(1234),
-            java.sql.Date.valueOf("2003-01-30"),
-        };
+        final Object[] values2 = {null, new java.sql.Date(1234),
+                new java.sql.Date(new Time(1234).getTime()),
+                new java.sql.Date(new Timestamp(1234).getTime()),
+                java.sql.Date.valueOf(new java.sql.Date(1234).toString()),
+                new java.sql.Date(1234), java.sql.Date.valueOf("2003-01-30"),};
 
-        assertEquals("values count", values1.length, values2.length);
+        assertThat(values2).as("values count").hasSize(values1.length);
 
         for (int i = 0; i < values1.length; i++)
         {
-            assertEquals("compare1 " + i, 0, THIS_TYPE.compare(values1[i], values2[i]));
-            assertEquals("compare2 " + i, 0, THIS_TYPE.compare(values2[i], values1[i]));
+            assertThat(THIS_TYPE.compare(values1[i], values2[i]))
+                    .as("compare1 " + i).isZero();
+            assertThat(THIS_TYPE.compare(values2[i], values1[i]))
+                    .as("compare2 " + i).isZero();
         }
     }
 
+    @Override
+    @Test
     public void testCompareInvalid() throws Exception
     {
-        Object[] values1 = {
-            new Integer(1234),
-            new Object(),
-            "bla",
-            "2000.05.05",
-        };
-        Object[] values2 = {
-            null,
-            null,
-            null,
-            null,
-        };
+        final Object[] values1 =
+                {Integer.valueOf(1234), new Object(), "bla", "2000.05.05",};
+        final Object[] values2 = {null, null, null, null,};
 
-        assertEquals("values count", values1.length, values2.length);
+        assertThat(values2).as("values count").hasSize(values1.length);
 
         for (int i = 0; i < values1.length; i++)
         {
-            try
-            {
-                THIS_TYPE.compare(values1[i], values2[i]);
-                fail("Should throw TypeCastException - " + i);
-            }
-            catch (TypeCastException e)
-            {
-            }
-
-            try
-            {
-                THIS_TYPE.compare(values1[i], values2[i]);
-                fail("Should throw TypeCastException - " + i);
-            }
-            catch (TypeCastException e)
-            {
-            }
+            final int id = i;
+            assertThrows(TypeCastException.class,
+                    () -> THIS_TYPE.compare(values1[id], values2[id]),
+                    "Should throw TypeCastException - " + id);
+            assertThrows(TypeCastException.class,
+                    () -> THIS_TYPE.compare(values1[id], values2[id]),
+                    "Should throw TypeCastException - " + id);
         }
     }
 
+    @Override
+    @Test
     public void testCompareDifferent() throws Exception
     {
-        Object[] less = {
-            null,
-            new java.sql.Date(0),
-            "1974-06-23"
-        };
+        final Object[] less = {null, new java.sql.Date(0), "1974-06-23"};
 
-        Object[] greater = {
-            new java.sql.Date(1234),
-            new java.sql.Date(System.currentTimeMillis()),
-            java.sql.Date.valueOf("2003-01-30"),
-        };
+        final Object[] greater = {new java.sql.Date(1234),
+                new java.sql.Date(System.currentTimeMillis()),
+                java.sql.Date.valueOf("2003-01-30"),};
 
-        assertEquals("values count", less.length, greater.length);
+        assertThat(greater).as("values count").hasSize(less.length);
 
         for (int i = 0; i < less.length; i++)
         {
-            assertTrue("less " + i, THIS_TYPE.compare(less[i], greater[i]) < 0);
-            assertTrue("greater " + i, THIS_TYPE.compare(greater[i], less[i]) > 0);
+            assertThat(THIS_TYPE.compare(less[i], greater[i])).as("less " + i)
+                    .isNegative();
+            assertThat(THIS_TYPE.compare(greater[i], less[i]))
+                    .as("greater " + i).isPositive();
         }
     }
 
+    @Override
+    @Test
     public void testSqlType() throws Exception
     {
-        assertEquals(THIS_TYPE, DataType.forSqlType(Types.DATE));
-        assertEquals("forSqlTypeName", THIS_TYPE, DataType.forSqlTypeName(THIS_TYPE.toString()));
-        assertEquals(Types.DATE, THIS_TYPE.getSqlType());
+        assertThat(DataType.forSqlType(Types.DATE)).isEqualTo(THIS_TYPE);
+        assertThat(DataType.forSqlTypeName(THIS_TYPE.toString()))
+                .as("forSqlTypeName").isEqualTo(THIS_TYPE);
+        assertThat(THIS_TYPE.getSqlType()).isEqualTo(Types.DATE);
     }
 
+    @Override
+    @Test
     public void testForObject() throws Exception
     {
-        assertEquals(THIS_TYPE, DataType.forObject(new java.sql.Date(1234)));
+        assertThat(DataType.forObject(new java.sql.Date(1234)))
+                .isEqualTo(THIS_TYPE);
     }
 
+    @Override
+    @Test
     public void testAsString() throws Exception
     {
-        java.sql.Date[] values = {
-            new java.sql.Date(1234),
-        };
+        final java.sql.Date[] values = {new java.sql.Date(1234),};
 
-        String[] expected = {
-            new java.sql.Date(1234).toString(),
-        };
+        final String[] expected = {new java.sql.Date(1234).toString(),};
 
-
-        assertEquals("actual vs expected count", values.length, expected.length);
+        assertThat(values).as("actual vs expected count")
+                .hasSize(expected.length);
 
         for (int i = 0; i < values.length; i++)
         {
-            assertEquals("asString " + i, expected[i], DataType.asString(values[i]));
+            assertThat(DataType.asString(values[i])).as("asString " + i)
+                    .isEqualTo(expected[i]);
         }
     }
 
+    @Override
+    @Test
     public void testGetSqlValue() throws Exception
     {
-        java.sql.Date[] expected = {
-            null,
-            new java.sql.Date(1234),
-        };
+        final java.sql.Date[] expected = {null, new java.sql.Date(1234),};
 
-        ExtendedMockSingleRowResultSet resultSet = new ExtendedMockSingleRowResultSet();
-        resultSet.addExpectedIndexedValues(expected);
-
+        when(mockedResultSet.getDate(1)).thenReturn(expected[0]);
+        when(mockedResultSet.getDate(2)).thenReturn(expected[1]);
         for (int i = 0; i < expected.length; i++)
         {
-            Object expectedValue = expected[i];
-            Object actualValue = THIS_TYPE.getSqlValue(i + 1, resultSet);
-            assertEquals("value", expectedValue, actualValue);
+            final Object expectedValue = expected[i];
+            final Object actualValue =
+                    THIS_TYPE.getSqlValue(i + 1, mockedResultSet);
+            assertThat(actualValue).as("value").isEqualTo(expectedValue);
         }
     }
 
