@@ -18,310 +18,295 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
  */
-
 package org.dbunit.dataset.datatype;
 
-import org.dbunit.database.ExtendedMockSingleRowResultSet;
-import org.dbunit.dataset.ITable;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.lenient;
 
 import java.math.BigDecimal;
+import java.sql.ResultSet;
 import java.sql.Types;
+
+import org.dbunit.dataset.ITable;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 /**
  * @author Manuel Laflamme
  * @version $Revision$
  */
-
+@ExtendWith(MockitoExtension.class)
 public class DoubleDataTypeTest extends AbstractDataTypeTest
 {
+
+    @Mock
+    private ResultSet mockedResultSet;
+
     private final static DataType[] TYPES = {DataType.FLOAT, DataType.DOUBLE};
 
-    public DoubleDataTypeTest(String name)
-    {
-        super(name);
-    }
-
+    @Override
+    @Test
     public void testToString() throws Exception
     {
-        String[] expected = {"FLOAT", "DOUBLE"};
+        final String[] expected = {"FLOAT", "DOUBLE"};
 
-        assertEquals("type count", expected.length, TYPES.length);
+        assertThat(TYPES).as("type count").hasSize(expected.length);
         for (int i = 0; i < TYPES.length; i++)
         {
-            assertEquals("name", expected[i], TYPES[i].toString());
+            assertThat(TYPES[i]).as("name").hasToString(expected[i]);
         }
     }
 
+    @Override
+    @Test
     public void testGetTypeClass() throws Exception
     {
         for (int i = 0; i < TYPES.length; i++)
         {
-            assertEquals("class", Double.class, TYPES[i].getTypeClass());
+            assertThat(TYPES[i].getTypeClass()).as("class")
+                    .isEqualTo(Double.class);
         }
     }
 
+    @Override
+    @Test
     public void testIsNumber() throws Exception
     {
         for (int i = 0; i < TYPES.length; i++)
         {
-            assertEquals("is number", true, TYPES[i].isNumber());
+            assertThat(TYPES[i].isNumber()).as("is number").isTrue();
         }
     }
 
+    @Override
+    @Test
     public void testIsDateTime() throws Exception
     {
         for (int i = 0; i < TYPES.length; i++)
         {
-            assertEquals("is date/time", false, TYPES[i].isDateTime());
+            assertThat(TYPES[i].isDateTime()).as("is date/time").isFalse();
         }
     }
 
+    @Override
+    @Test
     public void testTypeCast() throws Exception
     {
-        Object[] values = {
-            null,
-            "5.555",
-            new Float(Float.MAX_VALUE),
-            new Double(Double.MIN_VALUE),
-            "-7500",
-            "2.34E23",
-            new Double(0.666),
-            new Double(5.49879),
-            "-99.9",
-            new BigDecimal((double)1234),
-        };
+        final Object[] values = {null, "5.555", Float.valueOf(Float.MAX_VALUE),
+                Double.valueOf(Double.MIN_VALUE), "-7500", "2.34E23",
+                Double.valueOf(0.666), Double.valueOf(5.49879), "-99.9",
+                new BigDecimal((double) 1234),};
 
-        Double[] expected = {
-            null,
-            new Double(5.555),
-            new Double(Float.MAX_VALUE),
-            new Double(Double.MIN_VALUE),
-            new Double(-7500),
-            Double.valueOf("2.34E23"),
-            new Double(0.666),
-            new Double(5.49879),
-            new Double(-99.9),
-            new Double(1234),
-        };
+        final Double[] expected =
+                {null, Double.valueOf(5.555), Double.valueOf(Float.MAX_VALUE),
+                        Double.valueOf(Double.MIN_VALUE), Double.valueOf(-7500),
+                        Double.valueOf("2.34E23"), Double.valueOf(0.666),
+                        Double.valueOf(5.49879), Double.valueOf(-99.9),
+                        Double.valueOf(1234),};
 
-        assertEquals("actual vs expected count", values.length, expected.length);
+        assertThat(values).as("actual vs expected count")
+                .hasSize(expected.length);
 
         for (int i = 0; i < TYPES.length; i++)
         {
             for (int j = 0; j < values.length; j++)
             {
-                assertEquals("typecast " + j, expected[j],
-                        TYPES[i].typeCast(values[j]));
+                assertThat(TYPES[i].typeCast(values[j])).as("typecast " + j)
+                        .isEqualTo(expected[j]);
             }
         }
     }
 
-
+    @Override
+    @Test
     public void testTypeCastNone() throws Exception
     {
         for (int i = 0; i < TYPES.length; i++)
         {
-            DataType type = TYPES[i];
-            assertEquals("typecast " + type, null, type.typeCast(ITable.NO_VALUE));
+            final DataType type = TYPES[i];
+            assertThat(type.typeCast(ITable.NO_VALUE)).as("typecast " + type)
+                    .isNull();
         }
     }
 
+    @Override
+    @Test
     public void testTypeCastInvalid() throws Exception
     {
-        Object[] values = {
-            new Object(),
-            "bla",
-            new java.util.Date()};
+        final Object[] values = {new Object(), "bla", new java.util.Date()};
 
         for (int i = 0; i < TYPES.length; i++)
         {
             for (int j = 0; j < values.length; j++)
             {
-                try
-                {
-                    TYPES[i].typeCast(values[j]);
-                    fail("Should throw TypeCastException");
-                }
-                catch (TypeCastException e)
-                {
-                }
+                final int id = i;
+                final int jd = j;
+                assertThrows(TypeCastException.class,
+                        () -> TYPES[id].typeCast(values[jd]),
+                        "Should throw TypeCastException");
             }
         }
     }
 
+    @Override
+    @Test
     public void testCompareEquals() throws Exception
     {
-        Object[] values1 = {
-            null,
-            "5.555",
-            new Float(Float.MAX_VALUE),
-            new Double(Double.MIN_VALUE),
-            "-7500",
-            "2.34E23",
-            new Double(0.666),
-            new Double(5.49879),
-            "-99.9",
-            new BigDecimal((double)1234),
-            "123",
-        };
+        final Object[] values1 = {null, "5.555", Float.valueOf(Float.MAX_VALUE),
+                Double.valueOf(Double.MIN_VALUE), "-7500", "2.34E23",
+                Double.valueOf(0.666), Double.valueOf(5.49879), "-99.9",
+                new BigDecimal((double) 1234), "123",};
 
-        Object[] values2 = {
-            null,
-            new Double(5.555),
-            new Double(Float.MAX_VALUE),
-            new Double(Double.MIN_VALUE),
-            new Double(-7500),
-            Double.valueOf("2.34E23"),
-            new Double(0.666),
-            new Double(5.49879),
-            new Double(-99.9),
-            new Double(1234),
-            new Double(123.0)
-        };
+        final Object[] values2 =
+                {null, Double.valueOf(5.555), Double.valueOf(Float.MAX_VALUE),
+                        Double.valueOf(Double.MIN_VALUE), Double.valueOf(-7500),
+                        Double.valueOf("2.34E23"), Double.valueOf(0.666),
+                        Double.valueOf(5.49879), Double.valueOf(-99.9),
+                        Double.valueOf(1234), Double.valueOf(123.0)};
 
-        assertEquals("values count", values1.length, values2.length);
+        assertThat(values2).as("values count").hasSize(values1.length);
 
         for (int i = 0; i < TYPES.length; i++)
         {
             for (int j = 0; j < values1.length; j++)
             {
-                assertEquals("compare1 " + j, 0, TYPES[i].compare(values1[j], values2[j]));
-                assertEquals("compare2 " + j, 0, TYPES[i].compare(values2[j], values1[j]));
+                assertThat(TYPES[i].compare(values1[j], values2[j]))
+                        .as("compare1 " + j).isZero();
+                assertThat(TYPES[i].compare(values2[j], values1[j]))
+                        .as("compare2 " + j).isZero();
             }
         }
     }
 
+    @Override
+    @Test
     public void testCompareInvalid() throws Exception
     {
-        Object[] values1 = {
-            new Object(),
-            "bla",
-            new java.util.Date()
-        };
-        Object[] values2 = {
-            null,
-            null,
-            null
-        };
+        final Object[] values1 = {new Object(), "bla", new java.util.Date()};
+        final Object[] values2 = {null, null, null};
 
-        assertEquals("values count", values1.length, values2.length);
+        assertThat(values2).as("values count").hasSize(values1.length);
 
         for (int i = 0; i < TYPES.length; i++)
         {
             for (int j = 0; j < values1.length; j++)
             {
-                try
-                {
-                    TYPES[i].compare(values1[j], values2[j]);
-                    fail("Should throw TypeCastException");
-                }
-                catch (TypeCastException e)
-                {
-                }
+                final int id = i;
+                final int jd = j;
+                assertThrows(TypeCastException.class,
+                        () -> TYPES[id].compare(values1[jd], values2[jd]),
+                        "Should throw TypeCastException");
 
-                try
-                {
-                    TYPES[i].compare(values2[j], values1[j]);
-                    fail("Should throw TypeCastException");
-                }
-                catch (TypeCastException e)
-                {
-                }
+                assertThrows(TypeCastException.class,
+                        () -> TYPES[id].compare(values2[jd], values1[jd]),
+                        "Should throw TypeCastException");
             }
         }
     }
 
+    @Override
+    @Test
     public void testCompareDifferent() throws Exception
     {
-        Object[] less = {
-            null,
-            "-7500",
-            new Double(Float.MIN_VALUE),
-        };
+        final Object[] less = {null, "-7500", Double.valueOf(Float.MIN_VALUE),};
 
-        Object[] greater = {
-            "0",
-            "5.555",
-            new Float(Float.MAX_VALUE),
-        };
+        final Object[] greater =
+                {"0", "5.555", Float.valueOf(Float.MAX_VALUE),};
 
-        assertEquals("values count", less.length, greater.length);
+        assertThat(greater).as("values count").hasSize(less.length);
 
         for (int i = 0; i < TYPES.length; i++)
         {
             for (int j = 0; j < less.length; j++)
             {
-                assertTrue("less " + j, TYPES[i].compare(less[j], greater[j]) < 0);
-                assertTrue("greater " + j, TYPES[i].compare(greater[j], less[j]) > 0);
+                assertThat(TYPES[i].compare(less[j], greater[j]))
+                        .as("less " + j).isNegative();
+                assertThat(TYPES[i].compare(greater[j], less[j]))
+                        .as("greater " + j).isPositive();
             }
         }
     }
 
+    @Override
+    @Test
     public void testSqlType() throws Exception
     {
-        int[] sqlTypes = {Types.FLOAT, Types.DOUBLE};
+        final int[] sqlTypes = {Types.FLOAT, Types.DOUBLE};
 
-        assertEquals("count", sqlTypes.length, TYPES.length);
+        assertThat(TYPES).as("count").hasSize(sqlTypes.length);
         for (int i = 0; i < TYPES.length; i++)
         {
-            assertEquals("forSqlType", TYPES[i], DataType.forSqlType(sqlTypes[i]));
-            assertEquals("forSqlTypeName", TYPES[i], DataType.forSqlTypeName(TYPES[i].toString()));
-            assertEquals("getSqlType", sqlTypes[i], TYPES[i].getSqlType());
+            assertThat(DataType.forSqlType(sqlTypes[i])).as("forSqlType")
+                    .isEqualTo(TYPES[i]);
+            assertThat(DataType.forSqlTypeName(TYPES[i].toString()))
+                    .as("forSqlTypeName").isEqualTo(TYPES[i]);
+            assertThat(TYPES[i].getSqlType()).as("getSqlType")
+                    .isEqualTo(sqlTypes[i]);
         }
     }
 
+    @Override
+    @Test
     public void testForObject() throws Exception
     {
-        assertEquals(DataType.DOUBLE, DataType.forObject(new Double(1234)));
+        assertThat(DataType.forObject(Double.valueOf(1234)))
+                .isEqualTo(DataType.DOUBLE);
     }
 
+    @Override
+    @Test
     public void testAsString() throws Exception
     {
-        Object[] values = {
-            new Double("1234"),
-            new Double("12.34"),
-        };
+        final Object[] values =
+                {Double.valueOf("1234"), Double.valueOf("12.34"),};
 
-        String[] expected = {
-            "1234.0",
-            "12.34",
-        };
+        final String[] expected = {"1234.0", "12.34",};
 
-        assertEquals("actual vs expected count", values.length, expected.length);
+        assertThat(values).as("actual vs expected count")
+                .hasSize(expected.length);
 
         for (int i = 0; i < values.length; i++)
         {
-            assertEquals("asString " + i, expected[i], DataType.asString(values[i]));
+            assertThat(DataType.asString(values[i])).as("asString " + i)
+                    .isEqualTo(expected[i]);
         }
     }
 
+    @Override
+    @Test
     public void testGetSqlValue() throws Exception
     {
-        Double[] expected = {
-            null,
-            new Double(5.555),
-            new Double(Float.MAX_VALUE),
-            new Double(Double.MIN_VALUE),
-            new Double(-7500),
-            Double.valueOf("2.34E23"),
-            new Double(0.666),
-            new Double(5.49879),
-            new Double(-99.9),
-            new Double(1234),
-        };
-
-        ExtendedMockSingleRowResultSet resultSet = new ExtendedMockSingleRowResultSet();
-        resultSet.addExpectedIndexedValues(expected);
-
+        final Double[] expected =
+                {null, Double.valueOf(5.555), Double.valueOf(Float.MAX_VALUE),
+                        Double.valueOf(Double.MIN_VALUE), Double.valueOf(-7500),
+                        Double.valueOf("2.34E23"), Double.valueOf(0.666),
+                        Double.valueOf(5.49879), Double.valueOf(-99.9),
+                        Double.valueOf(1234),};
+        lenient().when(mockedResultSet.getDouble(2)).thenReturn(expected[1]);
+        lenient().when(mockedResultSet.getDouble(3)).thenReturn(expected[2]);
+        lenient().when(mockedResultSet.getDouble(4)).thenReturn(expected[3]);
+        lenient().when(mockedResultSet.getDouble(5)).thenReturn(expected[4]);
+        lenient().when(mockedResultSet.getDouble(6)).thenReturn(expected[5]);
+        lenient().when(mockedResultSet.getDouble(7)).thenReturn(expected[6]);
+        lenient().when(mockedResultSet.getDouble(8)).thenReturn(expected[7]);
+        lenient().when(mockedResultSet.getDouble(9)).thenReturn(expected[8]);
+        lenient().when(mockedResultSet.getDouble(10)).thenReturn(expected[9]);
+        lenient().when(mockedResultSet.wasNull()).thenReturn(true)
+                .thenReturn(true).thenReturn(false);
         for (int i = 0; i < expected.length; i++)
         {
-            Object expectedValue = expected[i];
+            final Object expectedValue = expected[i];
 
             for (int j = 0; j < TYPES.length; j++)
             {
-                DataType dataType = TYPES[j];
-                Object actualValue = dataType.getSqlValue(i + 1, resultSet);
-                assertEquals("value " + j, expectedValue, actualValue);
+                final DataType dataType = TYPES[j];
+                final Object actualValue =
+                        dataType.getSqlValue(i + 1, mockedResultSet);
+                assertThat(actualValue).as("value " + j)
+                        .isEqualTo(expectedValue);
             }
         }
     }
