@@ -20,7 +20,10 @@
  */
 package org.dbunit.operation;
 
-import java.io.File;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.fail;
+
 import java.io.FileReader;
 import java.io.Reader;
 import java.sql.SQLException;
@@ -48,6 +51,7 @@ import org.dbunit.dataset.datatype.DataType;
 import org.dbunit.dataset.xml.FlatXmlDataSetBuilder;
 import org.dbunit.dataset.xml.XmlDataSet;
 import org.dbunit.testutil.TestUtils;
+import org.junit.jupiter.api.Test;
 
 /**
  * @author Manuel Laflamme
@@ -56,43 +60,38 @@ import org.dbunit.testutil.TestUtils;
  */
 public class InsertOperationIT extends AbstractDatabaseIT
 {
-    public InsertOperationIT(String s)
-    {
-        super(s);
-    }
 
-    public void testMockExecute() throws Exception
+    @Test
+    void testMockExecute() throws Exception
     {
-        String schemaName = "schema";
-        String tableName = "table";
-        String[] expected = {
-            "insert into schema.table (c1, c2, c3) values ('toto', 1234, 'false')",
-            "insert into schema.table (c1, c2, c3) values ('qwerty', 123.45, 'true')",
-        };
+        final String schemaName = "schema";
+        final String tableName = "table";
+        final String[] expected = {
+                "insert into schema.table (c1, c2, c3) values ('toto', 1234, 'false')",
+                "insert into schema.table (c1, c2, c3) values ('qwerty', 123.45, 'true')",};
 
         // setup table
-        Column[] columns = new Column[]{
-            new Column("c1", DataType.VARCHAR),
-            new Column("c2", DataType.NUMERIC),
-            new Column("c3", DataType.BOOLEAN),
-        };
-        DefaultTable table = new DefaultTable(tableName, columns);
-        table.addRow(new Object[]{"toto", "1234", Boolean.FALSE});
-        table.addRow(new Object[]{"qwerty", new Double("123.45"), "true"});
-        IDataSet dataSet = new DefaultDataSet(table);
+        final Column[] columns =
+                new Column[] {new Column("c1", DataType.VARCHAR),
+                        new Column("c2", DataType.NUMERIC),
+                        new Column("c3", DataType.BOOLEAN),};
+        final DefaultTable table = new DefaultTable(tableName, columns);
+        table.addRow(new Object[] {"toto", "1234", Boolean.FALSE});
+        table.addRow(new Object[] {"qwerty", Double.valueOf("123.45"), "true"});
+        final IDataSet dataSet = new DefaultDataSet(table);
 
         // setup mock objects
-        MockBatchStatement statement = new MockBatchStatement();
+        final MockBatchStatement statement = new MockBatchStatement();
         statement.addExpectedBatchStrings(expected);
         statement.setExpectedExecuteBatchCalls(1);
         statement.setExpectedClearBatchCalls(1);
         statement.setExpectedCloseCalls(1);
 
-        MockStatementFactory factory = new MockStatementFactory();
+        final MockStatementFactory factory = new MockStatementFactory();
         factory.setExpectedCreatePreparedStatementCalls(1);
         factory.setupStatement(statement);
 
-        MockDatabaseConnection connection = new MockDatabaseConnection();
+        final MockDatabaseConnection connection = new MockDatabaseConnection();
         connection.setupDataSet(dataSet);
         connection.setupSchema(schemaName);
         connection.setupStatementFactory(factory);
@@ -106,167 +105,176 @@ public class InsertOperationIT extends AbstractDatabaseIT
         connection.verify();
     }
 
-    public void testExecuteWithBlanksDisabledAndEmptyString() throws Exception {
-        String schemaName = "schema";
-        String tableName = "table";
+    @Test
+    void testExecuteWithBlanksDisabledAndEmptyString() throws Exception
+    {
+        final String schemaName = "schema";
+        final String tableName = "table";
 
-        Column[] columns = new Column[]{
-            new Column("c3", DataType.VARCHAR),
-            new Column("c4", DataType.NUMERIC),
-        };
-        DefaultTable table = new DefaultTable(tableName, columns);
-        table.addRow(new Object[]{"", "1"});
-        IDataSet dataSet = new DefaultDataSet(table);
+        final Column[] columns =
+                new Column[] {new Column("c3", DataType.VARCHAR),
+                        new Column("c4", DataType.NUMERIC),};
+        final DefaultTable table = new DefaultTable(tableName, columns);
+        table.addRow(new Object[] {"", "1"});
+        final IDataSet dataSet = new DefaultDataSet(table);
 
         // setup mock objects
-        MockBatchStatement statement = new MockBatchStatement();
+        final MockBatchStatement statement = new MockBatchStatement();
         statement.setExpectedExecuteBatchCalls(0);
         statement.setExpectedClearBatchCalls(0);
         statement.setExpectedCloseCalls(1);
 
-        MockStatementFactory factory = new MockStatementFactory();
+        final MockStatementFactory factory = new MockStatementFactory();
         factory.setExpectedCreatePreparedStatementCalls(1);
         factory.setupStatement(statement);
 
-        MockDatabaseConnection connection = new MockDatabaseConnection();
+        final MockDatabaseConnection connection = new MockDatabaseConnection();
         connection.setupDataSet(dataSet);
         connection.setupSchema(schemaName);
         connection.setupStatementFactory(factory);
         connection.setExpectedCloseCalls(0);
 
         // execute operation
-        connection.getConfig().setFeature(DatabaseConfig.FEATURE_ALLOW_EMPTY_FIELDS, false);
-        try {
-            new InsertOperation().execute(connection, dataSet);
-            fail("Update should not succedd");
-        } catch(IllegalArgumentException e) {
-            // ignore
-        } finally {
-	        statement.verify();
-	        factory.verify();
-	        connection.verify();
-        }
-    }
-
-    public void testExecuteWithBlanksDisabledAndNonEmptyStrings() throws Exception {
-        String schemaName = "schema";
-        String tableName = "table";
-        String[] expected = {
-                String.format("insert into %s.%s (c3, c4) values ('not-empty', 1)", schemaName, tableName),
-                String.format("insert into %s.%s (c3, c4) values (NULL, 2)", schemaName, tableName)
-        };
-
-        Column[] columns = new Column[]{
-            new Column("c3", DataType.VARCHAR),
-            new Column("c4", DataType.NUMERIC),
-        };
-        DefaultTable table = new DefaultTable(tableName, columns);
-        table.addRow(new Object[]{"not-empty", "1"});
-        table.addRow(new Object[]{null, "2"});
-        IDataSet dataSet = new DefaultDataSet(table);
-
-        // setup mock objects
-        MockBatchStatement statement = new MockBatchStatement();
-        statement.addExpectedBatchStrings(expected);
-        statement.setExpectedExecuteBatchCalls(1);
-        statement.setExpectedClearBatchCalls(1);
-        statement.setExpectedCloseCalls(1);
-
-        MockStatementFactory factory = new MockStatementFactory();
-        factory.setExpectedCreatePreparedStatementCalls(1);
-        factory.setupStatement(statement);
-
-        MockDatabaseConnection connection = new MockDatabaseConnection();
-        connection.setupDataSet(dataSet);
-        connection.setupSchema(schemaName);
-        connection.setupStatementFactory(factory);
-        connection.setExpectedCloseCalls(0);
-
-        // execute operation
-        connection.getConfig().setFeature(DatabaseConfig.FEATURE_ALLOW_EMPTY_FIELDS, false);
-        new InsertOperation().execute(connection, dataSet);
+        connection.getConfig()
+                .setFeature(DatabaseConfig.FEATURE_ALLOW_EMPTY_FIELDS, false);
+        final InsertOperation io = new InsertOperation();
+        assertThrows(IllegalArgumentException.class,
+                () -> io.execute(connection, dataSet),
+                "Update should not succedd");
+        // ignore
 
         statement.verify();
         factory.verify();
         connection.verify();
     }
 
-    public void testExecuteWithBlanksAllowed() throws Exception {
-        String schemaName = "schema";
-        String tableName = "table";
-        String[] expected = {
-            String.format("insert into %s.%s (c3, c4) values ('not-empty', 1)", schemaName, tableName),
-            String.format("insert into %s.%s (c3, c4) values (NULL, 2)", schemaName, tableName),
-            String.format("insert into %s.%s (c3, c4) values ('', 3)", schemaName, tableName),
-        };
-
-        Column[] columns = new Column[]{
-            new Column("c3", DataType.VARCHAR),
-            new Column("c4", DataType.NUMERIC),
-        };
-        DefaultTable table = new DefaultTable(tableName, columns);
-        table.addRow(new Object[]{"not-empty", "1"});
-        table.addRow(new Object[]{null, "2"});
-        table.addRow(new Object[]{"", "3"});
-        IDataSet dataSet = new DefaultDataSet(table);
-
-        // setup mock objects
-        MockBatchStatement statement = new MockBatchStatement();
-        statement.addExpectedBatchStrings(expected);
-        statement.setExpectedExecuteBatchCalls(1);
-        statement.setExpectedClearBatchCalls(1);
-        statement.setExpectedCloseCalls(1);
-
-        MockStatementFactory factory = new MockStatementFactory();
-        factory.setExpectedCreatePreparedStatementCalls(1);
-        factory.setupStatement(statement);
-
-        MockDatabaseConnection connection = new MockDatabaseConnection();
-        connection.setupDataSet(dataSet);
-        connection.setupSchema(schemaName);
-        connection.setupStatementFactory(factory);
-        connection.setExpectedCloseCalls(0);
-
-        // execute operation
-        connection.getConfig().setFeature(DatabaseConfig.FEATURE_ALLOW_EMPTY_FIELDS, true);
-        new InsertOperation().execute(connection, dataSet);
-
-        statement.verify();
-        factory.verify();
-        connection.verify();
-    }
-
-    public void testExecuteUnknownColumn() throws Exception
+    @Test
+    void testExecuteWithBlanksDisabledAndNonEmptyStrings() throws Exception
     {
-        String tableName = "table";
+        final String schemaName = "schema";
+        final String tableName = "table";
+        final String[] expected = {
+                String.format(
+                        "insert into %s.%s (c3, c4) values ('not-empty', 1)",
+                        schemaName, tableName),
+                String.format("insert into %s.%s (c3, c4) values (NULL, 2)",
+                        schemaName, tableName)};
+
+        final Column[] columns =
+                new Column[] {new Column("c3", DataType.VARCHAR),
+                        new Column("c4", DataType.NUMERIC),};
+        final DefaultTable table = new DefaultTable(tableName, columns);
+        table.addRow(new Object[] {"not-empty", "1"});
+        table.addRow(new Object[] {null, "2"});
+        final IDataSet dataSet = new DefaultDataSet(table);
+
+        // setup mock objects
+        final MockBatchStatement statement = new MockBatchStatement();
+        statement.addExpectedBatchStrings(expected);
+        statement.setExpectedExecuteBatchCalls(1);
+        statement.setExpectedClearBatchCalls(1);
+        statement.setExpectedCloseCalls(1);
+
+        final MockStatementFactory factory = new MockStatementFactory();
+        factory.setExpectedCreatePreparedStatementCalls(1);
+        factory.setupStatement(statement);
+
+        final MockDatabaseConnection connection = new MockDatabaseConnection();
+        connection.setupDataSet(dataSet);
+        connection.setupSchema(schemaName);
+        connection.setupStatementFactory(factory);
+        connection.setExpectedCloseCalls(0);
+
+        // execute operation
+        connection.getConfig()
+                .setFeature(DatabaseConfig.FEATURE_ALLOW_EMPTY_FIELDS, false);
+        new InsertOperation().execute(connection, dataSet);
+
+        statement.verify();
+        factory.verify();
+        connection.verify();
+    }
+
+    @Test
+    void testExecuteWithBlanksAllowed() throws Exception
+    {
+        final String schemaName = "schema";
+        final String tableName = "table";
+        final String[] expected = {
+                String.format(
+                        "insert into %s.%s (c3, c4) values ('not-empty', 1)",
+                        schemaName, tableName),
+                String.format("insert into %s.%s (c3, c4) values (NULL, 2)",
+                        schemaName, tableName),
+                String.format("insert into %s.%s (c3, c4) values ('', 3)",
+                        schemaName, tableName),};
+
+        final Column[] columns =
+                new Column[] {new Column("c3", DataType.VARCHAR),
+                        new Column("c4", DataType.NUMERIC),};
+        final DefaultTable table = new DefaultTable(tableName, columns);
+        table.addRow(new Object[] {"not-empty", "1"});
+        table.addRow(new Object[] {null, "2"});
+        table.addRow(new Object[] {"", "3"});
+        final IDataSet dataSet = new DefaultDataSet(table);
+
+        // setup mock objects
+        final MockBatchStatement statement = new MockBatchStatement();
+        statement.addExpectedBatchStrings(expected);
+        statement.setExpectedExecuteBatchCalls(1);
+        statement.setExpectedClearBatchCalls(1);
+        statement.setExpectedCloseCalls(1);
+
+        final MockStatementFactory factory = new MockStatementFactory();
+        factory.setExpectedCreatePreparedStatementCalls(1);
+        factory.setupStatement(statement);
+
+        final MockDatabaseConnection connection = new MockDatabaseConnection();
+        connection.setupDataSet(dataSet);
+        connection.setupSchema(schemaName);
+        connection.setupStatementFactory(factory);
+        connection.setExpectedCloseCalls(0);
+
+        // execute operation
+        connection.getConfig()
+                .setFeature(DatabaseConfig.FEATURE_ALLOW_EMPTY_FIELDS, true);
+        new InsertOperation().execute(connection, dataSet);
+
+        statement.verify();
+        factory.verify();
+        connection.verify();
+    }
+
+    @Test
+    void testExecuteUnknownColumn() throws Exception
+    {
+        final String tableName = "table";
 
         // setup table
-        Column[] columns = new Column[]{
-            new Column("column", DataType.VARCHAR),
-            new Column("unknown", DataType.VARCHAR),
-        };
-        DefaultTable table = new DefaultTable(tableName, columns);
+        final Column[] columns =
+                new Column[] {new Column("column", DataType.VARCHAR),
+                        new Column("unknown", DataType.VARCHAR),};
+        final DefaultTable table = new DefaultTable(tableName, columns);
         table.addRow();
         table.setValue(0, columns[0].getColumnName(), null);
         table.setValue(0, columns[0].getColumnName(), "value");
-        IDataSet insertDataset = new DefaultDataSet(table);
+        final IDataSet insertDataset = new DefaultDataSet(table);
 
-        IDataSet databaseDataSet = new DefaultDataSet(
-                new DefaultTable(tableName, new Column[]{
-                    new Column("column", DataType.VARCHAR),
-                }));
+        final IDataSet databaseDataSet = new DefaultDataSet(new DefaultTable(
+                tableName,
+                new Column[] {new Column("column", DataType.VARCHAR),}));
 
         // setup mock objects
-        MockBatchStatement statement = new MockBatchStatement();
+        final MockBatchStatement statement = new MockBatchStatement();
         statement.setExpectedExecuteBatchCalls(0);
         statement.setExpectedClearBatchCalls(0);
         statement.setExpectedCloseCalls(0);
 
-        MockStatementFactory factory = new MockStatementFactory();
+        final MockStatementFactory factory = new MockStatementFactory();
         factory.setExpectedCreatePreparedStatementCalls(0);
         factory.setupStatement(statement);
 
-        MockDatabaseConnection connection = new MockDatabaseConnection();
+        final MockDatabaseConnection connection = new MockDatabaseConnection();
         connection.setupDataSet(databaseDataSet);
         connection.setupStatementFactory(factory);
         connection.setExpectedCloseCalls(0);
@@ -276,8 +284,7 @@ public class InsertOperationIT extends AbstractDatabaseIT
         {
             new InsertOperation().execute(connection, insertDataset);
             fail("Should not be here!");
-        }
-        catch (NoSuchColumnException e)
+        } catch (final NoSuchColumnException e)
         {
 
         }
@@ -287,44 +294,45 @@ public class InsertOperationIT extends AbstractDatabaseIT
         connection.verify();
     }
 
-    public void testExecuteIgnoreNone() throws Exception
+    @Test
+    void testExecuteIgnoreNone() throws Exception
     {
-        String schemaName = "schema";
-        String tableName = "table";
-        String[] expected = {
-            "insert into schema.table (c1, c2, c3) values ('toto', 1234, 'false')",
-            "insert into schema.table (c2, c3) values (123.45, 'true')",
-            "insert into schema.table (c1, c2, c3) values ('qwerty1', 1, 'true')",
-            "insert into schema.table (c1, c2, c3) values ('qwerty2', 2, 'false')",
-            "insert into schema.table (c3) values ('false')",
-        };
+        final String schemaName = "schema";
+        final String tableName = "table";
+        final String[] expected = {
+                "insert into schema.table (c1, c2, c3) values ('toto', 1234, 'false')",
+                "insert into schema.table (c2, c3) values (123.45, 'true')",
+                "insert into schema.table (c1, c2, c3) values ('qwerty1', 1, 'true')",
+                "insert into schema.table (c1, c2, c3) values ('qwerty2', 2, 'false')",
+                "insert into schema.table (c3) values ('false')",};
 
         // setup table
-        Column[] columns = new Column[]{
-            new Column("c1", DataType.VARCHAR),
-            new Column("c2", DataType.NUMERIC),
-            new Column("c3", DataType.BOOLEAN),
-        };
-        DefaultTable table = new DefaultTable(tableName, columns);
-        table.addRow(new Object[]{"toto", "1234", Boolean.FALSE});
-        table.addRow(new Object[]{ITable.NO_VALUE, new Double("123.45"), "true"});
-        table.addRow(new Object[]{"qwerty1", "1", Boolean.TRUE});
-        table.addRow(new Object[]{"qwerty2", "2", Boolean.FALSE});
-        table.addRow(new Object[]{ITable.NO_VALUE, ITable.NO_VALUE, Boolean.FALSE});
-        IDataSet dataSet = new DefaultDataSet(table);
+        final Column[] columns =
+                new Column[] {new Column("c1", DataType.VARCHAR),
+                        new Column("c2", DataType.NUMERIC),
+                        new Column("c3", DataType.BOOLEAN),};
+        final DefaultTable table = new DefaultTable(tableName, columns);
+        table.addRow(new Object[] {"toto", "1234", Boolean.FALSE});
+        table.addRow(
+                new Object[] {ITable.NO_VALUE, new Double("123.45"), "true"});
+        table.addRow(new Object[] {"qwerty1", "1", Boolean.TRUE});
+        table.addRow(new Object[] {"qwerty2", "2", Boolean.FALSE});
+        table.addRow(
+                new Object[] {ITable.NO_VALUE, ITable.NO_VALUE, Boolean.FALSE});
+        final IDataSet dataSet = new DefaultDataSet(table);
 
         // setup mock objects
-        MockBatchStatement statement = new MockBatchStatement();
+        final MockBatchStatement statement = new MockBatchStatement();
         statement.addExpectedBatchStrings(expected);
         statement.setExpectedExecuteBatchCalls(4);
         statement.setExpectedClearBatchCalls(4);
         statement.setExpectedCloseCalls(4);
 
-        MockStatementFactory factory = new MockStatementFactory();
+        final MockStatementFactory factory = new MockStatementFactory();
         factory.setExpectedCreatePreparedStatementCalls(4);
         factory.setupStatement(statement);
 
-        MockDatabaseConnection connection = new MockDatabaseConnection();
+        final MockDatabaseConnection connection = new MockDatabaseConnection();
         connection.setupDataSet(dataSet);
         connection.setupSchema(schemaName);
         connection.setupStatementFactory(factory);
@@ -338,100 +346,99 @@ public class InsertOperationIT extends AbstractDatabaseIT
         connection.verify();
     }
 
-//    public void testExecuteNullAsNone() throws Exception
-//    {
-//        String schemaName = "schema";
-//        String tableName = "table";
-//        String[] expected = {
-//            "insert into schema.table (c1, c2, c3) values ('toto', 1234, 'false')",
-//            "insert into schema.table (c2, c3) values (123.45, 'true')",
-//            "insert into schema.table (c1, c2, c3) values ('qwerty1', 1, 'true')",
-//            "insert into schema.table (c1, c2, c3) values ('qwerty2', 2, 'false')",
-//            "insert into schema.table (c3) values ('false')",
-//        };
-//
-//        // setup table
-//        List valueList = new ArrayList();
-//        valueList.add(new Object[]{"toto", "1234", Boolean.FALSE});
-//        valueList.add(new Object[]{null, new Double("123.45"), "true"});
-//        valueList.add(new Object[]{"qwerty1", "1", Boolean.TRUE});
-//        valueList.add(new Object[]{"qwerty2", "2", Boolean.FALSE});
-//        valueList.add(new Object[]{null, null, Boolean.FALSE});
-//        Column[] columns = new Column[]{
-//            new Column("c1", DataType.VARCHAR),
-//            new Column("c2", DataType.NUMERIC),
-//            new Column("c3", DataType.BOOLEAN),
-//        };
-//        DefaultTable table = new DefaultTable(tableName, columns, valueList);
-//        IDataSet dataSet = new DefaultDataSet(table);
-//
-//        // setup mock objects
-//        MockBatchStatement statement = new MockBatchStatement();
-//        statement.addExpectedBatchStrings(expected);
-//        statement.setExpectedExecuteBatchCalls(4);
-//        statement.setExpectedClearBatchCalls(4);
-//        statement.setExpectedCloseCalls(4);
-//
-//        MockStatementFactory factory = new MockStatementFactory();
-//        factory.setExpectedCreatePreparedStatementCalls(4);
-//        factory.setupStatement(statement);
-//
-//        MockDatabaseConnection connection = new MockDatabaseConnection();
-//        connection.setupDataSet(dataSet);
-//        connection.setupSchema(schemaName);
-//        connection.setupStatementFactory(factory);
-//        connection.setExpectedCloseCalls(0);
-//        DatabaseConfig config = connection.getConfig();
-//        config.setFeature(DatabaseConfig.FEATURE_NULL_AS_NONE, true);
-//
-//        // execute operation
-//        new InsertOperation().execute(connection, dataSet);
-//
-//        statement.verify();
-//        factory.verify();
-//        connection.verify();
-//    }
+    // public void testExecuteNullAsNone() throws Exception
+    // {
+    // String schemaName = "schema";
+    // String tableName = "table";
+    // String[] expected = {
+    // "insert into schema.table (c1, c2, c3) values ('toto', 1234, 'false')",
+    // "insert into schema.table (c2, c3) values (123.45, 'true')",
+    // "insert into schema.table (c1, c2, c3) values ('qwerty1', 1, 'true')",
+    // "insert into schema.table (c1, c2, c3) values ('qwerty2', 2, 'false')",
+    // "insert into schema.table (c3) values ('false')",
+    // };
+    //
+    // // setup table
+    // List valueList = new ArrayList();
+    // valueList.add(new Object[]{"toto", "1234", Boolean.FALSE});
+    // valueList.add(new Object[]{null, new Double("123.45"), "true"});
+    // valueList.add(new Object[]{"qwerty1", "1", Boolean.TRUE});
+    // valueList.add(new Object[]{"qwerty2", "2", Boolean.FALSE});
+    // valueList.add(new Object[]{null, null, Boolean.FALSE});
+    // Column[] columns = new Column[]{
+    // new Column("c1", DataType.VARCHAR),
+    // new Column("c2", DataType.NUMERIC),
+    // new Column("c3", DataType.BOOLEAN),
+    // };
+    // DefaultTable table = new DefaultTable(tableName, columns, valueList);
+    // IDataSet dataSet = new DefaultDataSet(table);
+    //
+    // // setup mock objects
+    // MockBatchStatement statement = new MockBatchStatement();
+    // statement.addExpectedBatchStrings(expected);
+    // statement.setExpectedExecuteBatchCalls(4);
+    // statement.setExpectedClearBatchCalls(4);
+    // statement.setExpectedCloseCalls(4);
+    //
+    // MockStatementFactory factory = new MockStatementFactory();
+    // factory.setExpectedCreatePreparedStatementCalls(4);
+    // factory.setupStatement(statement);
+    //
+    // MockDatabaseConnection connection = new MockDatabaseConnection();
+    // connection.setupDataSet(dataSet);
+    // connection.setupSchema(schemaName);
+    // connection.setupStatementFactory(factory);
+    // connection.setExpectedCloseCalls(0);
+    // DatabaseConfig config = connection.getConfig();
+    // config.setFeature(DatabaseConfig.FEATURE_NULL_AS_NONE, true);
+    //
+    // // execute operation
+    // new InsertOperation().execute(connection, dataSet);
+    //
+    // statement.verify();
+    // factory.verify();
+    // connection.verify();
+    // }
 
-    public void testExecuteWithEscapedNames() throws Exception
+    @Test
+    void testExecuteWithEscapedNames() throws Exception
     {
-        String schemaName = "schema";
-        String tableName = "table";
-        String[] expected = {
-            "insert into 'schema'.'table' ('c1', 'c2', 'c3') values ('toto', 1234, 'false')",
-            "insert into 'schema'.'table' ('c1', 'c2', 'c3') values ('qwerty', 123.45, 'true')",
-        };
+        final String schemaName = "schema";
+        final String tableName = "table";
+        final String[] expected = {
+                "insert into 'schema'.'table' ('c1', 'c2', 'c3') values ('toto', 1234, 'false')",
+                "insert into 'schema'.'table' ('c1', 'c2', 'c3') values ('qwerty', 123.45, 'true')",};
 
         // setup table
-        Column[] columns = new Column[]{
-            new Column("c1", DataType.VARCHAR),
-            new Column("c2", DataType.NUMERIC),
-            new Column("c3", DataType.BOOLEAN),
-        };
-        DefaultTable table = new DefaultTable(tableName, columns);
-        table.addRow(new Object[]{"toto", "1234", Boolean.FALSE});
-        table.addRow(new Object[]{"qwerty", new Double("123.45"), "true"});
-        IDataSet dataSet = new DefaultDataSet(table);
+        final Column[] columns =
+                new Column[] {new Column("c1", DataType.VARCHAR),
+                        new Column("c2", DataType.NUMERIC),
+                        new Column("c3", DataType.BOOLEAN),};
+        final DefaultTable table = new DefaultTable(tableName, columns);
+        table.addRow(new Object[] {"toto", "1234", Boolean.FALSE});
+        table.addRow(new Object[] {"qwerty", Double.valueOf("123.45"), "true"});
+        final IDataSet dataSet = new DefaultDataSet(table);
 
         // setup mock objects
-        MockBatchStatement statement = new MockBatchStatement();
+        final MockBatchStatement statement = new MockBatchStatement();
         statement.addExpectedBatchStrings(expected);
         statement.setExpectedExecuteBatchCalls(1);
         statement.setExpectedClearBatchCalls(1);
         statement.setExpectedCloseCalls(1);
 
-        MockStatementFactory factory = new MockStatementFactory();
+        final MockStatementFactory factory = new MockStatementFactory();
         factory.setExpectedCreatePreparedStatementCalls(1);
         factory.setupStatement(statement);
 
-        MockDatabaseConnection connection = new MockDatabaseConnection();
+        final MockDatabaseConnection connection = new MockDatabaseConnection();
         connection.setupDataSet(dataSet);
         connection.setupSchema(schemaName);
         connection.setupStatementFactory(factory);
         connection.setExpectedCloseCalls(0);
 
         // execute operation
-        connection.getConfig().setProperty(
-                DatabaseConfig.PROPERTY_ESCAPE_PATTERN, "'?'");
+        connection.getConfig()
+                .setProperty(DatabaseConfig.PROPERTY_ESCAPE_PATTERN, "'?'");
         new InsertOperation().execute(connection, dataSet);
 
         statement.verify();
@@ -439,18 +446,19 @@ public class InsertOperationIT extends AbstractDatabaseIT
         connection.verify();
     }
 
-    public void testExecuteWithEmptyTable() throws Exception
+    @Test
+    void testExecuteWithEmptyTable() throws Exception
     {
-        Column[] columns = {new Column("c1", DataType.VARCHAR)};
-        ITable table = new DefaultTable(new DefaultTableMetaData(
-                "name", columns, columns));
-        IDataSet dataSet = new DefaultDataSet(table);
+        final Column[] columns = {new Column("c1", DataType.VARCHAR)};
+        final ITable table = new DefaultTable(
+                new DefaultTableMetaData("name", columns, columns));
+        final IDataSet dataSet = new DefaultDataSet(table);
 
         // setup mock objects
-        MockStatementFactory factory = new MockStatementFactory();
+        final MockStatementFactory factory = new MockStatementFactory();
         factory.setExpectedCreatePreparedStatementCalls(0);
 
-        MockDatabaseConnection connection = new MockDatabaseConnection();
+        final MockDatabaseConnection connection = new MockDatabaseConnection();
         connection.setupDataSet(dataSet);
         connection.setupStatementFactory(factory);
         connection.setExpectedCloseCalls(0);
@@ -462,141 +470,171 @@ public class InsertOperationIT extends AbstractDatabaseIT
         connection.verify();
     }
 
-    public void testInsertClob() throws Exception
+    @Test
+    void testInsertClob() throws Exception
     {
         // execute this test only if the target database support CLOB
-        DatabaseEnvironment environment = DatabaseEnvironment.getInstance();
+        final DatabaseEnvironment environment =
+                DatabaseEnvironment.getInstance();
         if (environment.support(TestFeature.CLOB))
         {
-            String tableName = "CLOB_TABLE";
+            final String tableName = "CLOB_TABLE";
 
-            Reader in = new FileReader(TestUtils.getFile("xml/clobInsertTest.xml"));
-            IDataSet xmlDataSet = new FlatXmlDataSetBuilder().build(in);
+            final Reader in =
+                    new FileReader(TestUtils.getFile("xml/clobInsertTest.xml"));
+            final IDataSet xmlDataSet = new FlatXmlDataSetBuilder().build(in);
 
-            assertEquals("count before", 0, _connection.getRowCount(tableName));
+            assertThat(_connection.getRowCount(tableName)).as("count before")
+                    .isEqualTo(0);
 
             DatabaseOperation.INSERT.execute(_connection, xmlDataSet);
 
-            ITable tableAfter = _connection.createDataSet().getTable(tableName);
-            assertEquals("count after", 3, tableAfter.getRowCount());
+            final ITable tableAfter =
+                    _connection.createDataSet().getTable(tableName);
+            assertThat(tableAfter.getRowCount()).as("count after").isEqualTo(3);
             Assertion.assertEquals(xmlDataSet.getTable(tableName), tableAfter);
         }
     }
 
-    public void testInsertBlob() throws Exception
+    @Test
+    void testInsertBlob() throws Exception
     {
         // execute this test only if the target database support BLOB
-        DatabaseEnvironment environment = DatabaseEnvironment.getInstance();
+        final DatabaseEnvironment environment =
+                DatabaseEnvironment.getInstance();
         if (environment.support(TestFeature.BLOB))
         {
-            String tableName = "BLOB_TABLE";
+            final String tableName = "BLOB_TABLE";
 
-            Reader in = new FileReader(TestUtils.getFile("xml/blobInsertTest.xml"));
-            IDataSet xmlDataSet = new FlatXmlDataSetBuilder().build(in);
+            final Reader in =
+                    new FileReader(TestUtils.getFile("xml/blobInsertTest.xml"));
+            final IDataSet xmlDataSet = new FlatXmlDataSetBuilder().build(in);
 
-            assertEquals("count before", 0, _connection.getRowCount(tableName));
+            assertThat(_connection.getRowCount(tableName)).as("count before")
+                    .isEqualTo(0);
 
             DatabaseOperation.INSERT.execute(_connection, xmlDataSet);
 
-            ITable tableAfter = _connection.createDataSet().getTable(tableName);
-            assertEquals("count after", 3, tableAfter.getRowCount());
+            final ITable tableAfter =
+                    _connection.createDataSet().getTable(tableName);
+            assertThat(tableAfter.getRowCount()).as("count after").isEqualTo(3);
             Assertion.assertEquals(xmlDataSet.getTable(tableName), tableAfter);
         }
     }
 
-    public void testInsertSdoGeometry() throws Exception
+    @Test
+    void testInsertSdoGeometry() throws Exception
     {
         // execute this test only if the target database supports SDO_GEOMETRY
-        DatabaseEnvironment environment = DatabaseEnvironment.getInstance();
+        final DatabaseEnvironment environment =
+                DatabaseEnvironment.getInstance();
         if (environment.support(TestFeature.SDO_GEOMETRY))
         {
-            String tableName = "SDO_GEOMETRY_TABLE";
+            final String tableName = "SDO_GEOMETRY_TABLE";
 
-            Reader in = new FileReader(TestUtils.getFile("xml/sdoGeometryInsertTest.xml"));
-            IDataSet xmlDataSet = new FlatXmlDataSetBuilder().build(in);
+            final Reader in = new FileReader(
+                    TestUtils.getFile("xml/sdoGeometryInsertTest.xml"));
+            final IDataSet xmlDataSet = new FlatXmlDataSetBuilder().build(in);
 
-            assertEquals("count before", 0, _connection.getRowCount(tableName));
+            assertThat(_connection.getRowCount(tableName)).as("count before")
+                    .isEqualTo(0);
 
             DatabaseOperation.INSERT.execute(_connection, xmlDataSet);
 
-            ITable tableAfter = _connection.createDataSet().getTable(tableName);
-            assertEquals("count after", 1, tableAfter.getRowCount());
+            final ITable tableAfter =
+                    _connection.createDataSet().getTable(tableName);
+            assertThat(tableAfter.getRowCount()).as("count after").isEqualTo(1);
             Assertion.assertEquals(xmlDataSet.getTable(tableName), tableAfter);
         }
     }
 
-    public void testInsertXmlType() throws Exception
+    @Test
+    void testInsertXmlType() throws Exception
     {
         // execute this test only if the target database support CLOB
-        DatabaseEnvironment environment = DatabaseEnvironment.getInstance();
+        final DatabaseEnvironment environment =
+                DatabaseEnvironment.getInstance();
         if (environment.support(TestFeature.XML_TYPE))
         {
-            String tableName = "XML_TYPE_TABLE";
+            final String tableName = "XML_TYPE_TABLE";
 
-            Reader in = new FileReader(TestUtils.getFile("xml/xmlTypeInsertTest.xml"));
-            IDataSet xmlDataSet = new FlatXmlDataSetBuilder().build(in);
+            final Reader in = new FileReader(
+                    TestUtils.getFile("xml/xmlTypeInsertTest.xml"));
+            final IDataSet xmlDataSet = new FlatXmlDataSetBuilder().build(in);
 
-            assertEquals("count before", 0, _connection.getRowCount(tableName));
+            assertThat(_connection.getRowCount(tableName)).as("count before")
+                    .isEqualTo(0);
 
             DatabaseOperation.INSERT.execute(_connection, xmlDataSet);
 
-            ITable tableAfter = _connection.createDataSet().getTable(tableName);
-            assertEquals("count after", 3, tableAfter.getRowCount());
+            final ITable tableAfter =
+                    _connection.createDataSet().getTable(tableName);
+            assertThat(tableAfter.getRowCount()).as("count after").isEqualTo(3);
             Assertion.assertEquals(xmlDataSet.getTable(tableName), tableAfter);
         }
     }
 
-    public void testMissingColumns() throws Exception
+    @Test
+    void testMissingColumns() throws Exception
     {
-        Reader in = TestUtils.getFileReader("xml/missingColumnTest.xml");
-        IDataSet xmlDataSet = new XmlDataSet(in);
+        final Reader in = TestUtils.getFileReader("xml/missingColumnTest.xml");
+        final IDataSet xmlDataSet = new XmlDataSet(in);
 
-        ITable[] tablesBefore = DataSetUtils.getTables(_connection.createDataSet());
+        final ITable[] tablesBefore =
+                DataSetUtils.getTables(_connection.createDataSet());
         DatabaseOperation.INSERT.execute(_connection, xmlDataSet);
-        ITable[] tablesAfter = DataSetUtils.getTables(_connection.createDataSet());
+        final ITable[] tablesAfter =
+                DataSetUtils.getTables(_connection.createDataSet());
 
         // verify tables before
         for (int i = 0; i < tablesBefore.length; i++)
         {
-            ITable table = tablesBefore[i];
-            String tableName = table.getTableMetaData().getTableName();
+            final ITable table = tablesBefore[i];
+            final String tableName = table.getTableMetaData().getTableName();
             if (tableName.startsWith("EMPTY"))
             {
-                assertEquals(tableName + " before", 0, table.getRowCount());
+                assertThat(table.getRowCount()).as(tableName + " before")
+                        .isZero();
             }
         }
 
         // verify tables after
         for (int i = 0; i < tablesAfter.length; i++)
         {
-            ITable databaseTable = tablesAfter[i];
-            String tableName = databaseTable.getTableMetaData().getTableName();
+            final ITable databaseTable = tablesAfter[i];
+            final String tableName =
+                    databaseTable.getTableMetaData().getTableName();
 
             if (tableName.startsWith("EMPTY"))
             {
-                Column[] columns = databaseTable.getTableMetaData().getColumns();
-                ITable xmlTable = xmlDataSet.getTable(tableName);
+                final Column[] columns =
+                        databaseTable.getTableMetaData().getColumns();
+                final ITable xmlTable = xmlDataSet.getTable(tableName);
 
                 // verify row count
-                assertEquals("row count", xmlTable.getRowCount(),
-                        databaseTable.getRowCount());
+                assertThat(databaseTable.getRowCount()).as("row count")
+                        .isEqualTo(xmlTable.getRowCount());
 
                 // for each table row
                 for (int j = 0; j < databaseTable.getRowCount(); j++)
                 {
                     // verify first column values
-                    Object expected = xmlTable.getValue(j, columns[0].getColumnName());
-                    Object actual = databaseTable.getValue(j, columns[0].getColumnName());
+                    final Object expected =
+                            xmlTable.getValue(j, columns[0].getColumnName());
+                    final Object actual = databaseTable.getValue(j,
+                            columns[0].getColumnName());
 
-                    assertEquals(tableName + "." + columns[0].getColumnName(),
-                            expected, actual);
+                    assertThat(actual)
+                            .as(tableName + "." + columns[0].getColumnName())
+                            .isEqualTo(expected);
 
-                    // all remaining columns should be null except mssql server timestamp column which is of type binary.
+                    // all remaining columns should be null except mssql server
+                    // timestamp column which is of type binary.
                     for (int k = 1; k < columns.length; k++)
                     {
-                        String columnName = columns[k].getColumnName();
-                        assertEquals(tableName + "." + columnName,
-                                null, databaseTable.getValue(j, columnName));
+                        final String columnName = columns[k].getColumnName();
+                        assertThat(databaseTable.getValue(j, columnName))
+                                .as(tableName + "." + columnName).isNull();
                     }
                 }
             }
@@ -604,122 +642,126 @@ public class InsertOperationIT extends AbstractDatabaseIT
 
     }
 
-    public void testDefaultValues() throws Exception
+    @Test
+    void testDefaultValues() throws Exception
     {
-        String schemaName = "schema";
-        String tableName = "table";
-        String[] expected = {
-            "insert into schema.table (c1, c3, c4) values (NULL, NULL, NULL)"
-        };
-  
+        final String schemaName = "schema";
+        final String tableName = "table";
+        final String[] expected = {
+                "insert into schema.table (c1, c3, c4) values (NULL, NULL, NULL)"};
+
         // setup table
-        Column[] columns = new Column[]{
-            new Column("c1", DataType.NUMERIC, Column.NO_NULLS), // Disallow null, no default
-            new Column("c2", DataType.NUMERIC, DataType.NUMERIC.toString(), Column.NO_NULLS, "2"), // Disallow null, default
-            new Column("c3", DataType.NUMERIC, Column.NULLABLE), // Allow null, no default
-            new Column("c4", DataType.NUMERIC, DataType.NUMERIC.toString(), Column.NULLABLE, "4"), // Allow null, default
+        final Column[] columns = new Column[] {
+                new Column("c1", DataType.NUMERIC, Column.NO_NULLS), // Disallow
+                                                                     // null, no
+                                                                     // default
+                new Column("c2", DataType.NUMERIC, DataType.NUMERIC.toString(),
+                        Column.NO_NULLS, "2"), // Disallow null, default
+                new Column("c3", DataType.NUMERIC, Column.NULLABLE), // Allow
+                                                                     // null, no
+                                                                     // default
+                new Column("c4", DataType.NUMERIC, DataType.NUMERIC.toString(),
+                        Column.NULLABLE, "4"), // Allow null, default
         };
-        DefaultTable table = new DefaultTable(tableName, columns);
-        table.addRow(new Object[]{null, null, null, null});
-        IDataSet dataSet = new DefaultDataSet(table);
-  
+        final DefaultTable table = new DefaultTable(tableName, columns);
+        table.addRow(new Object[] {null, null, null, null});
+        final IDataSet dataSet = new DefaultDataSet(table);
+
         // setup mock objects
-        MockBatchStatement statement = new MockBatchStatement();
+        final MockBatchStatement statement = new MockBatchStatement();
         statement.addExpectedBatchStrings(expected);
         statement.setExpectedExecuteBatchCalls(1);
         statement.setExpectedClearBatchCalls(1);
         statement.setExpectedCloseCalls(1);
-  
-        MockStatementFactory factory = new MockStatementFactory();
+
+        final MockStatementFactory factory = new MockStatementFactory();
         factory.setExpectedCreatePreparedStatementCalls(1);
         factory.setupStatement(statement);
-  
-        MockDatabaseConnection connection = new MockDatabaseConnection();
+
+        final MockDatabaseConnection connection = new MockDatabaseConnection();
         connection.setupDataSet(dataSet);
         connection.setupSchema(schemaName);
         connection.setupStatementFactory(factory);
         connection.setExpectedCloseCalls(0);
-  
+
         // execute operation
         new InsertOperation().execute(connection, dataSet);
-  
+
         statement.verify();
         factory.verify();
         connection.verify();
     }
 
-    public void testExecute() throws Exception
+    @Test
+    void testExecute() throws Exception
     {
-        Reader in = TestUtils.getFileReader("xml/insertOperationTest.xml");
-        IDataSet dataSet = new XmlDataSet(in);
+        final Reader in =
+                TestUtils.getFileReader("xml/insertOperationTest.xml");
+        final IDataSet dataSet = new XmlDataSet(in);
 
         testExecute(dataSet);
     }
 
-    public void testExecuteCaseInsensitive() throws Exception
+    @Test
+    void testExecuteCaseInsensitive() throws Exception
     {
-        Reader in = TestUtils.getFileReader("xml/insertOperationTest.xml");
-        IDataSet dataSet = new XmlDataSet(in);
+        final Reader in =
+                TestUtils.getFileReader("xml/insertOperationTest.xml");
+        final IDataSet dataSet = new XmlDataSet(in);
 
         testExecute(new LowerCaseDataSet(dataSet));
     }
 
-    public void testExecuteForwardOnly() throws Exception
+    @Test
+    void testExecuteForwardOnly() throws Exception
     {
-        Reader in = TestUtils.getFileReader("xml/insertOperationTest.xml");
-        IDataSet dataSet = new XmlDataSet(in);
+        final Reader in =
+                TestUtils.getFileReader("xml/insertOperationTest.xml");
+        final IDataSet dataSet = new XmlDataSet(in);
 
         testExecute(new ForwardOnlyDataSet(dataSet));
     }
 
-    private void testExecute(IDataSet dataSet) throws Exception, SQLException
+    private void testExecute(final IDataSet dataSet)
+            throws Exception, SQLException
     {
-        ITable[] tablesBefore = DataSetUtils.getTables(_connection.createDataSet());
+        final ITable[] tablesBefore =
+                DataSetUtils.getTables(_connection.createDataSet());
         DatabaseOperation.INSERT.execute(_connection, dataSet);
-        ITable[] tablesAfter = DataSetUtils.getTables(_connection.createDataSet());
+        final ITable[] tablesAfter =
+                DataSetUtils.getTables(_connection.createDataSet());
 
-        assertEquals("table count", tablesBefore.length, tablesAfter.length);
+        assertThat(tablesAfter).as("table count").hasSameSizeAs(tablesBefore);
         for (int i = 0; i < tablesBefore.length; i++)
         {
-            ITable table = tablesBefore[i];
-            String name = table.getTableMetaData().getTableName();
-
+            final ITable table = tablesBefore[i];
+            final String name = table.getTableMetaData().getTableName();
 
             if (name.startsWith("EMPTY"))
             {
-                assertEquals(name + "before", 0, table.getRowCount());
+                assertThat(table.getRowCount()).as(name + "before").isZero();
             }
         }
 
         for (int i = 0; i < tablesAfter.length; i++)
         {
-            ITable table = tablesAfter[i];
-            String name = table.getTableMetaData().getTableName();
+            final ITable table = tablesAfter[i];
+            final String name = table.getTableMetaData().getTableName();
 
             if (name.startsWith("EMPTY"))
             {
                 if (dataSet instanceof ForwardOnlyDataSet)
                 {
-                    assertTrue(name, table.getRowCount() > 0);
-                }
-                else
+                    assertThat(table.getRowCount()).as(name).isPositive();
+                } else
                 {
-                    SortedTable expectedTable = new SortedTable(
-                            dataSet.getTable(name), dataSet.getTable(name).getTableMetaData());
-                    SortedTable actualTable = new SortedTable(table);
+                    final SortedTable expectedTable =
+                            new SortedTable(dataSet.getTable(name),
+                                    dataSet.getTable(name).getTableMetaData());
+                    final SortedTable actualTable = new SortedTable(table);
                     Assertion.assertEquals(expectedTable, actualTable);
                 }
             }
         }
     }
 }
-
-
-
-
-
-
-
-
-
-
